First commited as before_43074_rev1