@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2015 IBM Corporation and others.
+ * Copyright (c) 2006, 2009 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -8,7 +8,6 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *     Matthew Hall - bug 263693
- *     Stefan Xenos <sxenos@gmail.com> - Bug 335792
  *******************************************************************************/
 
 package org.eclipse.core.databinding.observable.set;
@@ -28,20 +27,18 @@ import org.eclipse.core.databinding.observable.map.MapChangeEvent;
 import org.eclipse.core.databinding.observable.map.MapDiff;
 
 /**
- *
+ * 
  * <p>
  * This class is thread safe. All state accessing methods must be invoked from
  * the {@link Realm#isCurrent() current realm}. Methods for adding and removing
  * listeners may be invoked from any thread.
  * </p>
- *
+ * 
  * @since 1.0
- *
+ * 
  * @deprecated This class is deprecated.
  */
 @Deprecated
-// OK to hide warnings on a deprecated class
-@SuppressWarnings({ "rawtypes", "unchecked" })
 public class MappedSet extends ObservableSet {
 
 	private final IObservableMap wrappedMap;
@@ -136,10 +133,10 @@ public class MappedSet extends ObservableSet {
 	protected boolean handleAddition(Object mapValue) {
 		Integer count = (Integer) valueCounts.get(mapValue);
 		if (count == null) {
-			valueCounts.put(mapValue, Integer.valueOf(1));
+			valueCounts.put(mapValue, new Integer(1));
 			return true;
 		}
-		valueCounts.put(mapValue, Integer.valueOf(count.intValue() + 1));
+		valueCounts.put(mapValue, new Integer(count.intValue() + 1));
 		return false;
 	}
 
@@ -153,7 +150,7 @@ public class MappedSet extends ObservableSet {
 			valueCounts.remove(mapValue);
 			return true;
 		}
-		valueCounts.put(mapValue, Integer.valueOf(count.intValue() - 1));
+		valueCounts.put(mapValue, new Integer(count.intValue() - 1));
 		return false;
 	}
 
