@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2015 IBM Corporation and others.
+ * Copyright (c) 2004, 2014 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -34,16 +34,22 @@ import org.eclipse.swt.accessibility.AccessibleAdapter;
 import org.eclipse.swt.accessibility.AccessibleControlAdapter;
 import org.eclipse.swt.accessibility.AccessibleControlEvent;
 import org.eclipse.swt.accessibility.AccessibleEvent;
+import org.eclipse.swt.events.DisposeEvent;
+import org.eclipse.swt.events.DisposeListener;
 import org.eclipse.swt.events.FocusAdapter;
 import org.eclipse.swt.events.FocusEvent;
 import org.eclipse.swt.events.KeyAdapter;
 import org.eclipse.swt.events.KeyEvent;
+import org.eclipse.swt.events.ModifyEvent;
+import org.eclipse.swt.events.ModifyListener;
 import org.eclipse.swt.events.MouseAdapter;
 import org.eclipse.swt.events.MouseEvent;
 import org.eclipse.swt.events.MouseMoveListener;
 import org.eclipse.swt.events.MouseTrackListener;
 import org.eclipse.swt.events.SelectionAdapter;
 import org.eclipse.swt.events.SelectionEvent;
+import org.eclipse.swt.events.TraverseEvent;
+import org.eclipse.swt.events.TraverseListener;
 import org.eclipse.swt.graphics.Color;
 import org.eclipse.swt.graphics.Font;
 import org.eclipse.swt.graphics.Image;
@@ -89,7 +95,7 @@ public class FilteredTree extends Composite {
 	 * <p>
 	 * <strong>Note:</strong> This is only used if the new look is chosen.
 	 * </p>
-	 *
+	 * 
 	 * @since 3.5
 	 */
 	protected Control clearButtonControl;
@@ -125,7 +131,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * The parent composite of the filtered tree.
-	 *
+	 * 
 	 * @since 3.3
 	 */
 	protected Composite parent;
@@ -135,7 +141,7 @@ public class FilteredTree extends Composite {
 	 * default is to show these controls. This can be overridden by providing a
 	 * setting in the product configuration file. The setting to add to not show
 	 * these controls is:
-	 *
+	 * 
 	 * org.eclipse.ui/SHOW_FILTERED_TEXTS=false
 	 */
 	protected boolean showFilterControls;
@@ -168,13 +174,13 @@ public class FilteredTree extends Composite {
 	static {
 		Bundle bundle = org.eclipse.e4.ui.internal.workbench.swt.WorkbenchSWTActivator
 				.getDefault().getBundle();
-		IPath enabledPath = new Path("$nl$/icons/full/etool16/clear_co.png");
+		IPath enabledPath = new Path("$nl$/icons/full/etool16/clear_co.gif");
 		URL enabledURL = FileLocator.find(bundle, enabledPath, null);
 		ImageDescriptor enabledDesc = ImageDescriptor.createFromURL(enabledURL);
 		if (enabledDesc != null)
 			JFaceResources.getImageRegistry().put(CLEAR_ICON, enabledDesc);
 
-		IPath disabledPath = new Path("$nl$/icons/full/etool16/clear_co.png");
+		IPath disabledPath = new Path("$nl$/icons/full/etool16/clear_co.gif");
 		URL disabledURL = FileLocator.find(bundle, disabledPath, null);
 		ImageDescriptor disabledDesc = ImageDescriptor
 				.createFromURL(disabledURL);
@@ -185,7 +191,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Create a new instance of the receiver.
-	 *
+	 * 
 	 * @param parent
 	 *            the parent <code>Composite</code>
 	 * @param treeStyle
@@ -227,11 +233,11 @@ public class FilteredTree extends Composite {
 	 * the default creation behavior may use this constructor, but must ensure
 	 * that the <code>init(composite, int, PatternFilter)</code> method is
 	 * called in the overriding constructor.
-	 *
+	 * 
 	 * @param parent
 	 *            the parent <code>Composite</code>
 	 * @see #init(int, PatternFilter)
-	 *
+	 * 
 	 * @since 3.5
 	 */
 	protected FilteredTree(Composite parent) {
@@ -262,12 +268,12 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Create the filtered tree.
-	 *
+	 * 
 	 * @param treeStyle
 	 *            the style bits for the <code>Tree</code>
 	 * @param filter
 	 *            the filter to be used
-	 *
+	 * 
 	 * @since 3.3
 	 */
 	protected void init(int treeStyle, PatternFilter filter) {
@@ -282,7 +288,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Create the filtered tree's controls. Subclasses should override.
-	 *
+	 * 
 	 * @param parent
 	 * @param treeStyle
 	 */
@@ -330,7 +336,7 @@ public class FilteredTree extends Composite {
 			Text testText = null;
 			try {
 				testText = new Text(composite, SWT.SEARCH | SWT.ICON_CANCEL);
-				useNativeSearchField = Boolean.valueOf(
+				useNativeSearchField = new Boolean(
 						(testText.getStyle() & SWT.ICON_CANCEL) != 0);
 			} finally {
 				if (testText != null) {
@@ -346,7 +352,7 @@ public class FilteredTree extends Composite {
 	 * Create the filter controls. By default, a text and corresponding tool bar
 	 * button that clears the contents of the text is created. Subclasses may
 	 * override.
-	 *
+	 * 
 	 * @param parent
 	 *            parent <code>Composite</code> of the filter controls
 	 * @return the <code>Composite</code> that contains the filter controls
@@ -371,7 +377,7 @@ public class FilteredTree extends Composite {
 	 * {@link #doCreateTreeViewer(Composite, int)} to create the tree viewer.
 	 * Subclasses should override {@link #doCreateTreeViewer(Composite, int)}
 	 * instead of overriding this method.
-	 *
+	 * 
 	 * @param parent
 	 *            parent <code>Composite</code>
 	 * @param style
@@ -382,7 +388,12 @@ public class FilteredTree extends Composite {
 		treeViewer = doCreateTreeViewer(parent, style);
 		GridData data = new GridData(SWT.FILL, SWT.FILL, true, true);
 		treeViewer.getControl().setLayoutData(data);
-		treeViewer.getControl().addDisposeListener(e -> refreshJob.cancel());
+		treeViewer.getControl().addDisposeListener(new DisposeListener() {
+			@Override
+			public void widgetDisposed(DisposeEvent e) {
+				refreshJob.cancel();
+			}
+		});
 		if (treeViewer instanceof NotifyingTreeViewer) {
 			patternFilter.setUseCache(true);
 		}
@@ -392,13 +403,13 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Creates the tree viewer. Subclasses may override.
-	 *
+	 * 
 	 * @param parent
 	 *            the parent composite
 	 * @param style
 	 *            SWT style bits used to create the tree viewer
 	 * @return the tree viewer
-	 *
+	 * 
 	 * @since 3.3
 	 */
 	protected TreeViewer doCreateTreeViewer(Composite parent, int style) {
@@ -407,17 +418,17 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Return the first item in the tree that matches the filter pattern.
-	 *
+	 * 
 	 * @param items
 	 * @return the first matching TreeItem
 	 */
 	private TreeItem getFirstMatchingItem(TreeItem[] items) {
-		for (TreeItem item : items) {
-			if (patternFilter.isLeafMatch(treeViewer, item.getData())
-					&& patternFilter.isElementSelectable(item.getData())) {
-				return item;
+		for (int i = 0; i < items.length; i++) {
+			if (patternFilter.isLeafMatch(treeViewer, items[i].getData())
+					&& patternFilter.isElementSelectable(items[i].getData())) {
+				return items[i];
 			}
-			TreeItem treeItem = getFirstMatchingItem(item.getItems());
+			TreeItem treeItem = getFirstMatchingItem(items[i].getItems());
 			if (treeItem != null) {
 				return treeItem;
 			}
@@ -427,7 +438,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Create the refresh job for the receiver.
-	 *
+	 * 
 	 */
 	private void createRefreshJob() {
 		refreshJob = doCreateRefreshJob();
@@ -437,9 +448,9 @@ public class FilteredTree extends Composite {
 	/**
 	 * Creates a workbench job that will refresh the tree based on the current
 	 * filter text. Subclasses may override.
-	 *
+	 * 
 	 * @return a workbench job that can be scheduled to refresh the tree
-	 *
+	 * 
 	 * @since 3.4
 	 */
 	protected BasicUIJob doCreateRefreshJob() {
@@ -473,7 +484,9 @@ public class FilteredTree extends Composite {
 					redrawFalseControl.setRedraw(false);
 					if (!narrowingDown) {
 						// collapse all
-						for (TreeItem item : treeViewer.getTree().getItems()) {
+						TreeItem[] is = treeViewer.getTree().getItems();
+						for (int i = 0; i < is.length; i++) {
+							TreeItem item = is[i];
 							if (item.getExpanded()) {
 								treeViewer.setExpandedState(item.getData(),
 										false);
@@ -530,7 +543,7 @@ public class FilteredTree extends Composite {
 			/**
 			 * Returns true if the job should be canceled (because of timeout or
 			 * actual cancellation).
-			 *
+			 * 
 			 * @param items
 			 * @param monitor
 			 * @param cancelTime
@@ -583,7 +596,7 @@ public class FilteredTree extends Composite {
 	 * {@link #doCreateFilterText(Composite)} to create the text control.
 	 * Subclasses should override {@link #doCreateFilterText(Composite)} instead
 	 * of overriding this method.
-	 *
+	 * 
 	 * @param parent
 	 *            <code>Composite</code> of the filter text
 	 */
@@ -609,14 +622,14 @@ public class FilteredTree extends Composite {
 
 					/**
 					 * Return the number of filtered items
-					 *
+					 * 
 					 * @return int
 					 */
 					private int getFilteredItemsCount() {
 						int total = 0;
 						TreeItem[] items = getViewer().getTree().getItems();
-						for (TreeItem item : items) {
-							total += itemCount(item);
+						for (int i = 0; i < items.length; i++) {
+							total += itemCount(items[i]);
 
 						}
 						return total;
@@ -625,15 +638,15 @@ public class FilteredTree extends Composite {
 					/**
 					 * Return the count of treeItem and it's children to
 					 * infinite depth.
-					 *
+					 * 
 					 * @param treeItem
 					 * @return int
 					 */
 					private int itemCount(TreeItem treeItem) {
 						int count = 1;
 						TreeItem[] children = treeItem.getItems();
-						for (TreeItem element : children) {
-							count += itemCount(element);
+						for (int i = 0; i < children.length; i++) {
+							count += itemCount(children[i]);
 
 						}
 						return count;
@@ -676,36 +689,44 @@ public class FilteredTree extends Composite {
 		});
 
 		// enter key set focus to tree
-		filterText.addTraverseListener(e -> {
-			if (e.detail == SWT.TRAVERSE_RETURN) {
-				e.doit = false;
-				if (getViewer().getTree().getItemCount() == 0) {
-					Display.getCurrent().beep();
-				} else {
-					// if the initial filter text hasn't changed, do not try
-					// to match
-					boolean hasFocus = getViewer().getTree().setFocus();
-					boolean textChanged = !getInitialText().equals(
-							filterText.getText().trim());
-					if (hasFocus && textChanged
-							&& filterText.getText().trim().length() > 0) {
-						Tree tree = getViewer().getTree();
-						TreeItem item;
-						if (tree.getSelectionCount() > 0)
-							item = getFirstMatchingItem(tree.getSelection());
-						else
-							item = getFirstMatchingItem(tree.getItems());
-						if (item != null) {
-							tree.setSelection(new TreeItem[] { item });
-							ISelection sel = getViewer().getSelection();
-							getViewer().setSelection(sel, true);
+		filterText.addTraverseListener(new TraverseListener() {
+			@Override
+			public void keyTraversed(TraverseEvent e) {
+				if (e.detail == SWT.TRAVERSE_RETURN) {
+					e.doit = false;
+					if (getViewer().getTree().getItemCount() == 0) {
+						Display.getCurrent().beep();
+					} else {
+						// if the initial filter text hasn't changed, do not try
+						// to match
+						boolean hasFocus = getViewer().getTree().setFocus();
+						boolean textChanged = !getInitialText().equals(
+								filterText.getText().trim());
+						if (hasFocus && textChanged
+								&& filterText.getText().trim().length() > 0) {
+							Tree tree = getViewer().getTree();
+							TreeItem item;
+							if (tree.getSelectionCount() > 0)
+								item = getFirstMatchingItem(tree.getSelection());
+							else
+								item = getFirstMatchingItem(tree.getItems());
+							if (item != null) {
+								tree.setSelection(new TreeItem[] { item });
+								ISelection sel = getViewer().getSelection();
+								getViewer().setSelection(sel, true);
+							}
 						}
 					}
 				}
 			}
 		});
 
-		filterText.addModifyListener(e -> textChanged());
+		filterText.addModifyListener(new ModifyListener() {
+			@Override
+			public void modifyText(ModifyEvent e) {
+				textChanged();
+			}
+		});
 
 		// if we're using a field with built in cancel we need to listen for
 		// default selection changes (which tell us the cancel button has been
@@ -731,11 +752,11 @@ public class FilteredTree extends Composite {
 	/**
 	 * Creates the text control for entering the filter text. Subclasses may
 	 * override.
-	 *
+	 * 
 	 * @param parent
 	 *            the parent composite
 	 * @return the text widget
-	 *
+	 * 
 	 * @since 3.3
 	 */
 	protected Text doCreateFilterText(Composite parent) {
@@ -767,9 +788,9 @@ public class FilteredTree extends Composite {
 	/**
 	 * Return the time delay that should be used when scheduling the filter
 	 * refresh job. Subclasses may override.
-	 *
+	 * 
 	 * @return a time delay in milliseconds before the job should run
-	 *
+	 * 
 	 * @since 3.5
 	 */
 	protected long getRefreshJobDelay() {
@@ -778,7 +799,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Set the background for the widgets that support the filter text area.
-	 *
+	 * 
 	 * @param background
 	 *            background <code>Color</code> to set
 	 */
@@ -796,7 +817,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Create the button that clears the text.
-	 *
+	 * 
 	 * @param parent
 	 *            parent <code>Composite</code> of toolbar button
 	 */
@@ -878,10 +899,13 @@ public class FilteredTree extends Composite {
 				public void mouseHover(MouseEvent e) {
 				}
 			});
-			clearButton.addDisposeListener(e -> {
-				inactiveImage.dispose();
-				activeImage.dispose();
-				pressedImage.dispose();
+			clearButton.addDisposeListener(new DisposeListener() {
+				@Override
+				public void widgetDisposed(DisposeEvent e) {
+					inactiveImage.dispose();
+					activeImage.dispose();
+					pressedImage.dispose();
+				}
 			});
 			clearButton.getAccessible().addAccessibleListener(
 					new AccessibleAdapter() {
@@ -911,7 +935,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Set the text in the filter control.
-	 *
+	 * 
 	 * @param string
 	 */
 	protected void setFilterText(String string) {
@@ -923,7 +947,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Returns the pattern filter used by this tree.
-	 *
+	 * 
 	 * @return The pattern filter; never <code>null</code>.
 	 */
 	public final PatternFilter getPatternFilter() {
@@ -932,7 +956,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Get the tree viewer of the receiver.
-	 *
+	 * 
 	 * @return the tree viewer
 	 */
 	public TreeViewer getViewer() {
@@ -942,7 +966,7 @@ public class FilteredTree extends Composite {
 	/**
 	 * Get the filter text for the receiver, if it was created. Otherwise return
 	 * <code>null</code>.
-	 *
+	 * 
 	 * @return the filter Text, or null if it was not created
 	 */
 	public Text getFilterControl() {
@@ -952,7 +976,7 @@ public class FilteredTree extends Composite {
 	/**
 	 * Convenience method to return the text of the filter control. If the text
 	 * widget is not created, then null is returned.
-	 *
+	 * 
 	 * @return String in the text, or null if the text does not exist
 	 */
 	protected String getFilterString() {
@@ -963,7 +987,7 @@ public class FilteredTree extends Composite {
 	 * Set the text that will be shown until the first focus. A default value is
 	 * provided, so this method only need be called if overriding the default
 	 * initial text is desired.
-	 *
+	 * 
 	 * @param text
 	 *            initial text to appear in text field
 	 */
@@ -975,11 +999,14 @@ public class FilteredTree extends Composite {
 				setFilterText(initialText);
 				textChanged();
 			} else {
-				getDisplay().asyncExec(() -> {
-					if (!filterText.isDisposed()
-							&& filterText.isFocusControl()) {
-						setFilterText(initialText);
-						textChanged();
+				getDisplay().asyncExec(new Runnable() {
+					@Override
+					public void run() {
+						if (!filterText.isDisposed()
+								&& filterText.isFocusControl()) {
+							setFilterText(initialText);
+							textChanged();
+						}
 					}
 				});
 			}
@@ -991,7 +1018,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Select all text in the filter text field.
-	 *
+	 * 
 	 */
 	protected void selectAll() {
 		if (filterText != null) {
@@ -1001,7 +1028,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Get the initial text for the receiver.
-	 *
+	 * 
 	 * @return String
 	 */
 	protected String getInitialText() {
@@ -1012,14 +1039,14 @@ public class FilteredTree extends Composite {
 	 * Return a bold font if the given element matches the given pattern.
 	 * Clients can opt to call this method from a Viewer's label provider to get
 	 * a bold font for which to highlight the given element in the tree.
-	 *
+	 * 
 	 * @param element
 	 *            element for which a match should be determined
 	 * @param tree
 	 *            FilteredTree in which the element resides
 	 * @param filter
 	 *            PatternFilter which determines a match
-	 *
+	 * 
 	 * @return bold font
 	 */
 	public static Font getBoldFont(Object element, FilteredTree tree,
@@ -1054,9 +1081,9 @@ public class FilteredTree extends Composite {
 	/**
 	 * Custom tree viewer subclass that clears the caches in patternFilter on
 	 * any change to the tree. See bug 187200.
-	 *
+	 * 
 	 * @since 3.3
-	 *
+	 * 
 	 */
 	class NotifyingTreeViewer extends TreeViewer {
 
