@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2015 Matthew Hall and others.
+ * Copyright (c) 2008, 2009 Matthew Hall and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -16,7 +16,7 @@ import org.eclipse.jface.databinding.swt.WidgetValueProperty;
 
 /**
  * @since 3.3
- *
+ * 
  */
 public abstract class WidgetIntValueProperty extends WidgetValueProperty {
 	WidgetIntValueProperty() {
@@ -38,7 +38,7 @@ public abstract class WidgetIntValueProperty extends WidgetValueProperty {
 
 	@Override
 	protected Object doGetValue(Object source) {
-		return Integer.valueOf(doGetIntValue(source));
+		return new Integer(doGetIntValue(source));
 	}
 
 	@Override
