@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2003, 2015 IBM Corporation and others.
+ * Copyright (c) 2003, 2014 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -32,7 +32,7 @@ import org.eclipse.swt.widgets.Menu;
  * <p>
  * This class may be instantiated; it may also be subclassed.
  * </p>
- *
+ * 
  * @since 3.0
  */
 public class CoolBarManager extends ContributionManager implements
@@ -46,7 +46,7 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * The original creation order of the contribution items.
      */
-    private ArrayList<IContributionItem> cbItemsCreationOrder = new ArrayList<>();
+    private ArrayList<IContributionItem> cbItemsCreationOrder = new ArrayList<IContributionItem>();
 
     /**
      * MenuManager for cool bar pop-up menu, or null if none.
@@ -76,7 +76,7 @@ public class CoolBarManager extends ContributionManager implements
      * Creates a cool bar manager for an existing cool bar control. This
      * manager becomes responsible for the control, and will dispose of it when
      * the manager is disposed.
-     *
+     * 
      * @param coolBar
      *            the cool bar control
      */
@@ -90,7 +90,7 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * Creates a cool bar manager with the given SWT style. Calling <code>createControl</code>
      * will create the cool bar control.
-     *
+     * 
      * @param style
      *            the cool bar item style; see
      *            {@link org.eclipse.swt.widgets.CoolBar CoolBar}for for valid
@@ -109,7 +109,7 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * Collapses consecutive separators and removes a separator from the
      * beginning and end of the list.
-     *
+     * 
      * @param contributionList
      *            the list of contributions; must not be <code>null</code>.
      * @return The contribution list provided with extraneous separators
@@ -172,7 +172,9 @@ public class CoolBarManager extends ContributionManager implements
 
         // Cycle through the current list looking for duplicates.
         IContributionItem[] currentItems = getItems();
-        for (IContributionItem currentItem : currentItems) {
+        for (int i = 0; i < currentItems.length; i++) {
+            IContributionItem currentItem = currentItems[i];
+
             // We ignore null entries.
             if (currentItem == null) {
                 continue;
@@ -180,7 +182,7 @@ public class CoolBarManager extends ContributionManager implements
 
             String secondId = currentItem.getId();
             if (firstId.equals(secondId)) {
-                if (Policy.TRACE_TOOLBAR) {
+                if (Policy.TRACE_TOOLBAR) { 
                     System.out.println("Trying to add a duplicate item."); //$NON-NLS-1$
                     new Exception().printStackTrace(System.out);
                     System.out.println("DONE --------------------------"); //$NON-NLS-1$
@@ -196,7 +198,7 @@ public class CoolBarManager extends ContributionManager implements
      * Positions the list iterator to the end of all the separators. Calling
      * <code>next()</code> the iterator should return the immediate object
      * following the last separator.
-     *
+     * 
      * @param iterator
      *            the list iterator.
      */
@@ -214,7 +216,7 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * Returns whether the cool bar control has been created and not yet
      * disposed.
-     *
+     * 
      * @return <code>true</code> if the control has been created and not yet
      *         disposed, <code>false</code> otherwise
      */
@@ -225,7 +227,7 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * Creates and returns this manager's cool bar control. Does not create a
      * new control if one already exists.
-     *
+     * 
      * @param parent
      *            the parent control
      * @return the cool bar control
@@ -254,12 +256,12 @@ public class CoolBarManager extends ContributionManager implements
             coolBar = null;
         }
         IContributionItem[] items = getItems();
-        for (IContributionItem item : items) {
+        for (int i = 0; i < items.length; i++) {
             // Disposes of the contribution item.
             // If Contribution Item is a toolbar then it will dispose of
             // all the nested
             // contribution items.
-            item.dispose();
+            items[i].dispose();
         }
         // If a context menu existed then dispose of it.
         if (contextMenuManager != null) {
@@ -271,7 +273,7 @@ public class CoolBarManager extends ContributionManager implements
 
     /**
      * Disposes the given cool item.
-     *
+     * 
      * @param item
      *            the cool item to dispose
      */
@@ -294,22 +296,23 @@ public class CoolBarManager extends ContributionManager implements
 
     /**
      * Finds the cool item associated with the given contribution item.
-     *
+     * 
      * @param item
      *            the contribution item
      * @return the associated cool item, or <code>null</code> if not found
      */
     private CoolItem findCoolItem(IContributionItem item) {
-        CoolItem[] coolItems = (coolBar == null) ? null : coolBar.getItems();
+        CoolItem[] coolItems = (coolBar == null) ? null : coolBar.getItems(); 
         return findCoolItem(coolItems, item);
     }
-
+    
     private CoolItem findCoolItem(CoolItem[] items, IContributionItem item) {
         if (items == null) {
 			return null;
 		}
 
-        for (CoolItem coolItem : items) {
+        for (int i = 0; i < items.length; i++) {
+            CoolItem coolItem = items[i];
             IContributionItem data = (IContributionItem) coolItem.getData();
             if (data != null && data.equals(item)) {
 				return coolItem;
@@ -323,7 +326,7 @@ public class CoolBarManager extends ContributionManager implements
      * include at least one entry and the first entry will always be zero.
      * CoolBar.getWrapIndices() is inconsistent in whether or not it returns an
      * index for the first row.
-     *
+     * 
      * @param wraps
      *            the wrap indicies from the cool bar widget
      * @return the adjusted wrap indicies.
@@ -349,7 +352,7 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * Returns the control of the Menu Manager. If the menu manager does not
      * have a control then one is created.
-     *
+     * 
      * @return menu control associated with manager, or null if none
      */
     private Menu getContextMenuControl() {
@@ -370,7 +373,7 @@ public class CoolBarManager extends ContributionManager implements
 
     /**
      * Returns the cool bar control for this manager.
-     *
+     * 
      * @return the cool bar control, or <code>null</code> if none
      */
     public CoolBar getControl() {
@@ -379,14 +382,14 @@ public class CoolBarManager extends ContributionManager implements
 
     /**
      * Returns an array list of all the contribution items in the manager.
-     *
+     * 
      * @return an array list of contribution items.
      */
     private ArrayList<IContributionItem> getItemList() {
         IContributionItem[] cbItems = getItems();
-        ArrayList<IContributionItem> list = new ArrayList<>(cbItems.length);
-        for (IContributionItem cbItem : cbItems) {
-            list.add(cbItem);
+        ArrayList<IContributionItem> list = new ArrayList<IContributionItem>(cbItems.length);
+        for (int i = 0; i < cbItems.length; i++) {
+            list.add(cbItems[i]);
         }
         return list;
     }
@@ -401,7 +404,7 @@ public class CoolBarManager extends ContributionManager implements
 
     /**
      * Returns the number of rows that should be displayed visually.
-     *
+     * 
      * @param items
      *            the array of contributin items
      * @return the number of rows
@@ -430,7 +433,7 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * Subclasses may extend this <code>ContributionManager</code> method,
      * but must call <code>super.itemAdded</code>.
-     *
+     * 
      * @see org.eclipse.jface.action.ContributionManager#itemAdded(org.eclipse.jface.action.IContributionItem)
      */
     @Override
@@ -459,7 +462,7 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * Subclasses may extend this <code>ContributionManager</code> method,
      * but must call <code>super.itemRemoved</code>.
-     *
+     * 
      * @see org.eclipse.jface.action.ContributionManager#itemRemoved(org.eclipse.jface.action.IContributionItem)
      */
     @Override
@@ -476,7 +479,7 @@ public class CoolBarManager extends ContributionManager implements
      * Positions the list iterator to the starting of the next row. By calling
      * next on the returned iterator, it will return the first element of the
      * next row.
-     *
+     * 
      * @param iterator
      *            the list iterator of contribution items
      * @param ignoreCurrentItem
@@ -494,7 +497,7 @@ public class CoolBarManager extends ContributionManager implements
         if ((currentElement != null) && (currentElement.isSeparator())) {
             collapseSeparators(iterator);
             return;
-        }
+        } 
 
         //Find next separator
         while (iterator.hasNext()) {
@@ -562,7 +565,7 @@ public class CoolBarManager extends ContributionManager implements
         // Traverse through all cool items in the coolbar add them to a new
         // data structure
         // in the correct order
-        ArrayList<IContributionItem> displayedItems = new ArrayList<>(coolBar.getItemCount());
+        ArrayList<IContributionItem> displayedItems = new ArrayList<IContributionItem>(coolBar.getItemCount());
         for (int i = 0; i < coolItems.length; i++) {
             CoolItem coolItem = coolItems[i];
             if (coolItem.getData() instanceof IContributionItem) {
@@ -581,7 +584,7 @@ public class CoolBarManager extends ContributionManager implements
         }
 
         // Determine which rows are invisible
-        ArrayList<Integer> existingVisibleRows = new ArrayList<>(4);
+        ArrayList<Integer> existingVisibleRows = new ArrayList<Integer>(4);
         ListIterator<IContributionItem> rowIterator = contributionList.listIterator();
         collapseSeparators(rowIterator);
         int numRow = 0;
@@ -591,7 +594,7 @@ public class CoolBarManager extends ContributionManager implements
                 IContributionItem cbItem = rowIterator
                         .next();
                 if (displayedItems.contains(cbItem)) {
-					existingVisibleRows.add(Integer.valueOf(numRow));
+                    existingVisibleRows.add(new Integer(numRow));
                     break;
                 }
                 if (cbItem.isSeparator()) {
@@ -608,7 +611,7 @@ public class CoolBarManager extends ContributionManager implements
             row = existingRows.next().intValue();
         }
 
-        HashMap<IContributionItem, Integer> itemLocation = new HashMap<>();
+        HashMap<IContributionItem, Integer> itemLocation = new HashMap<IContributionItem, Integer>();
         for (ListIterator<IContributionItem> locationIterator = displayedItems.listIterator(); locationIterator
                 .hasNext();) {
             IContributionItem item = locationIterator
@@ -621,7 +624,7 @@ public class CoolBarManager extends ContributionManager implements
                     row++;
                 }
             } else {
-				itemLocation.put(item, Integer.valueOf(row));
+                itemLocation.put(item, new Integer(row));
             }
 
         }
@@ -651,7 +654,7 @@ public class CoolBarManager extends ContributionManager implements
 
     /**
      * Relocates the given contribution item to the specified index.
-     *
+     * 
      * @param cbItem
      *            the conribution item to relocate
      * @param index
@@ -760,15 +763,15 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * Replaces the current items with the given items.
      * Forces an update.
-     *
+     * 
      * @param newItems the items with which to replace the current items
      */
     public void setItems(IContributionItem[] newItems) {
         // dispose of all the cool items on the cool bar manager
         if (coolBar != null) {
             CoolItem[] coolItems = coolBar.getItems();
-            for (CoolItem coolItem : coolItems) {
-                dispose(coolItem);
+            for (int i = 0; i < coolItems.length; i++) {
+                dispose(coolItems[i]);
             }
         }
         // Set the internal structure to this order
@@ -788,7 +791,7 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * Subclasses may extend this <code>IContributionManager</code> method,
      * but must call <code>super.update</code>.
-     *
+     * 
      * @see org.eclipse.jface.action.IContributionManager#update(boolean)
      */
     @Override
@@ -817,8 +820,9 @@ public class CoolBarManager extends ContributionManager implements
              * a cool bar.
              */
             final IContributionItem[] items = getItems();
-            final List<IContributionItem> visibleItems = new ArrayList<>(items.length);
-            for (final IContributionItem item : items) {
+            final List<IContributionItem> visibleItems = new ArrayList<IContributionItem>(items.length);
+            for (int i = 0; i < items.length; i++) {
+                final IContributionItem item = items[i];
                 if (isChildVisible(item)) {
                     visibleItems.add(item);
                 }
@@ -830,14 +834,14 @@ public class CoolBarManager extends ContributionManager implements
              * to be disposed. Dynamic items are also removed.
              */
             CoolItem[] coolItems = coolBar.getItems();
-            final ArrayList<CoolItem> coolItemsToRemove = new ArrayList<>(coolItems.length);
-            for (CoolItem coolItem : coolItems) {
-                final Object data = coolItem.getData();
+            final ArrayList<CoolItem> coolItemsToRemove = new ArrayList<CoolItem>(coolItems.length);
+            for (int i = 0; i < coolItems.length; i++) {
+                final Object data = coolItems[i].getData();
                 if ((data == null)
                         || (!visibleItems.contains(data))
                         || ((data instanceof IContributionItem) && ((IContributionItem) data)
                                 .isDynamic())) {
-                    coolItemsToRemove.add(coolItem);
+                    coolItemsToRemove.add(coolItems[i]);
                 }
             }
 
@@ -926,7 +930,8 @@ public class CoolBarManager extends ContributionManager implements
             updateWrapIndices();
 
             // Update the sizes.
-            for (IContributionItem item : items) {
+            for (int i = 0; i < items.length; i++) {
+                IContributionItem item = items[i];
                 item.update(SIZE);
             }
 
@@ -953,7 +958,7 @@ public class CoolBarManager extends ContributionManager implements
         if (coolBar != null) {
             CoolItem[] items = coolBar.getItems();
             if (items != null) {
-                ArrayList<Control> children = new ArrayList<>(items.length);
+                ArrayList<Control> children = new ArrayList<Control>(items.length);
                 for (int i = 0; i < items.length; i++) {
                     if ((items[i].getControl() != null)
                             && (!items[i].getControl().isDisposed())) {
@@ -985,7 +990,8 @@ public class CoolBarManager extends ContributionManager implements
         int j = 0;
         CoolItem[] coolItems = (coolBar == null) ? null : coolBar.getItems();
 
-		for (IContributionItem item : items) {
+        for (int i = 0; i < items.length; i++) {
+            IContributionItem item = items[i];
             CoolItem coolItem = findCoolItem(coolItems, item);
             if (item.isSeparator()) {
                 foundSeparator = true;
@@ -1020,17 +1026,17 @@ public class CoolBarManager extends ContributionManager implements
             coolBar.setWrapIndices(wrapIndices);
         }
     }
-
+    
 	private boolean isChildVisible(IContributionItem item) {
 		Boolean v;
-
+		
 		IContributionManagerOverrides overrides = getOverrides();
 		if(overrides == null) {
 			v = null;
 		} else {
-			v = getOverrides().getVisible(item);
+			v = getOverrides().getVisible(item); 
 		}
-
+		
 		if (v != null) {
 			return v.booleanValue();
 		}
