@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2015 IBM Corporation and others.
+ * Copyright (c) 2004, 2014 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -12,8 +12,6 @@
  *     Lars Vogel <Lars.Vogel@gmail.com> - Bug 422040
  *******************************************************************************/
 package org.eclipse.ui.dialogs;
-
-import static org.eclipse.swt.events.SelectionListener.widgetDefaultSelectedAdapter;
 
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
@@ -34,14 +32,22 @@ import org.eclipse.swt.accessibility.AccessibleAdapter;
 import org.eclipse.swt.accessibility.AccessibleControlAdapter;
 import org.eclipse.swt.accessibility.AccessibleControlEvent;
 import org.eclipse.swt.accessibility.AccessibleEvent;
+import org.eclipse.swt.events.DisposeEvent;
+import org.eclipse.swt.events.DisposeListener;
 import org.eclipse.swt.events.FocusAdapter;
 import org.eclipse.swt.events.FocusEvent;
 import org.eclipse.swt.events.KeyAdapter;
 import org.eclipse.swt.events.KeyEvent;
+import org.eclipse.swt.events.ModifyEvent;
+import org.eclipse.swt.events.ModifyListener;
 import org.eclipse.swt.events.MouseAdapter;
 import org.eclipse.swt.events.MouseEvent;
 import org.eclipse.swt.events.MouseMoveListener;
 import org.eclipse.swt.events.MouseTrackListener;
+import org.eclipse.swt.events.SelectionAdapter;
+import org.eclipse.swt.events.SelectionEvent;
+import org.eclipse.swt.events.TraverseEvent;
+import org.eclipse.swt.events.TraverseListener;
 import org.eclipse.swt.graphics.Color;
 import org.eclipse.swt.graphics.Font;
 import org.eclipse.swt.graphics.Image;
@@ -64,7 +70,7 @@ import org.eclipse.ui.progress.WorkbenchJob;
 /**
  * A simple control that provides a text widget and a tree viewer. The contents
  * of the text widget are used to drive a PatternFilter that is on the viewer.
- *
+ * 
  * @see org.eclipse.ui.dialogs.PatternFilter
  * @since 3.2
  */
@@ -94,12 +100,12 @@ public class FilteredTree extends Composite {
 	 * <p>
 	 * <strong>Note:</strong> This is only used if the new look is chosen.
 	 * </p>
-	 *
+	 * 
 	 * @since 3.5
 	 */
 	protected Control clearButtonControl;
-
-
+	
+	
 	/**
 	 * The viewer for the filtered tree. This value should never be
 	 * <code>null</code> after the widget creation methods are complete.
@@ -130,7 +136,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * The parent composite of the filtered tree.
-	 *
+	 * 
 	 * @since 3.3
 	 */
 	protected Composite parent;
@@ -140,7 +146,7 @@ public class FilteredTree extends Composite {
 	 * default is to show these controls. This can be overridden by providing a
 	 * setting in the product configuration file. The setting to add to not show
 	 * these controls is:
-	 *
+	 * 
 	 * org.eclipse.ui/SHOW_FILTERED_TEXTS=false
 	 */
 	protected boolean showFilterControls;
@@ -152,7 +158,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Tells whether to use the pre 3.5 or the new look.
-	 *
+	 * 
 	 * @since 3.5
 	 */
 	private boolean useNewLook = false;
@@ -161,7 +167,7 @@ public class FilteredTree extends Composite {
 	 * Tells whether this filtetered tree is used to make quick selections. In
 	 * this mode the first match in the tree is automatically selected while
 	 * filtering and the 'Enter' key is not used to move the focus to the tree.
-	 *
+	 * 
 	 * @since 3.105
 	 */
 	private boolean quickSelectionMode = false;
@@ -202,14 +208,14 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Create a new instance of the receiver.
-	 *
+	 * 
 	 * @param parent
 	 *            the parent <code>Composite</code>
 	 * @param treeStyle
 	 *            the style bits for the <code>Tree</code>
 	 * @param filter
 	 *            the filter to be used
-	 *
+	 * 
 	 * @deprecated As of 3.5, replaced by
 	 *             {@link #FilteredTree(Composite, int, PatternFilter, boolean)} where using the new
 	 *             look is encouraged
@@ -220,10 +226,10 @@ public class FilteredTree extends Composite {
 		this.parent = parent;
 		init(treeStyle, filter);
 	}
-
+	
 	/**
 	 * Create a new instance of the receiver.
-	 *
+	 * 
 	 * @param parent
 	 *            the parent <code>Composite</code>
 	 * @param treeStyle
@@ -246,11 +252,11 @@ public class FilteredTree extends Composite {
 	 * the default creation behavior may use this constructor, but must ensure
 	 * that the <code>init(composite, int, PatternFilter)</code> method is
 	 * called in the overriding constructor.
-	 *
+	 * 
 	 * @param parent
 	 *            the parent <code>Composite</code>
 	 * @see #init(int, PatternFilter)
-	 *
+	 * 
 	 * @since 3.3
 	 * @deprecated As of 3.5, replaced by {@link #FilteredTree(Composite, boolean)} where using the
 	 *             look is encouraged
@@ -260,19 +266,19 @@ public class FilteredTree extends Composite {
 		super(parent, SWT.NONE);
 		this.parent = parent;
 	}
-
+	
 	/**
 	 * Create a new instance of the receiver. Subclasses that wish to override
 	 * the default creation behavior may use this constructor, but must ensure
 	 * that the <code>init(composite, int, PatternFilter)</code> method is
 	 * called in the overriding constructor.
-	 *
+	 * 
 	 * @param parent
 	 *            the parent <code>Composite</code>
 	 * @param useNewLook
 	 *            <code>true</code> if the new 3.5 look should be used
 	 * @see #init(int, PatternFilter)
-	 *
+	 * 
 	 * @since 3.5
 	 */
 	protected FilteredTree(Composite parent, boolean useNewLook) {
@@ -283,12 +289,12 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Create the filtered tree.
-	 *
+	 * 
 	 * @param treeStyle
 	 *            the style bits for the <code>Tree</code>
 	 * @param filter
 	 *            the filter to be used
-	 *
+	 * 
 	 * @since 3.3
 	 */
 	protected void init(int treeStyle, PatternFilter filter) {
@@ -304,7 +310,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Create the filtered tree's controls. Subclasses should override.
-	 *
+	 * 
 	 * @param parent
 	 * @param treeStyle
 	 */
@@ -345,32 +351,32 @@ public class FilteredTree extends Composite {
 		treeComposite.setLayoutData(data);
 		createTreeControl(treeComposite, treeStyle);
 	}
-
+	
 	private static Boolean useNativeSearchField;
-
+	
 	private static boolean useNativeSearchField(Composite composite) {
 		if (useNativeSearchField == null) {
 			useNativeSearchField = Boolean.FALSE;
 			Text testText = null;
 			try {
 				testText = new Text(composite, SWT.SEARCH | SWT.ICON_CANCEL);
-				useNativeSearchField = Boolean.valueOf((testText.getStyle() & SWT.ICON_CANCEL) != 0);
+				useNativeSearchField = new Boolean((testText.getStyle() & SWT.ICON_CANCEL) != 0);
 			} finally {
 				if (testText != null) {
 					testText.dispose();
 				}
 			}
-
+				
 		}
 		return useNativeSearchField.booleanValue();
 	}
-
+	
 
 	/**
 	 * Create the filter controls. By default, a text and corresponding tool bar
 	 * button that clears the contents of the text is created. Subclasses may
 	 * override.
-	 *
+	 * 
 	 * @param parent
 	 *            parent <code>Composite</code> of the filter controls
 	 * @return the <code>Composite</code> that contains the filter controls
@@ -398,7 +404,7 @@ public class FilteredTree extends Composite {
 	 * {@link #doCreateTreeViewer(Composite, int)} to create the tree viewer.
 	 * Subclasses should override {@link #doCreateTreeViewer(Composite, int)}
 	 * instead of overriding this method.
-	 *
+	 * 
 	 * @param parent
 	 *            parent <code>Composite</code>
 	 * @param style
@@ -409,7 +415,12 @@ public class FilteredTree extends Composite {
 		treeViewer = doCreateTreeViewer(parent, style);
 		GridData data = new GridData(SWT.FILL, SWT.FILL, true, true);
 		treeViewer.getControl().setLayoutData(data);
-		treeViewer.getControl().addDisposeListener(e -> refreshJob.cancel());
+		treeViewer.getControl().addDisposeListener(new DisposeListener() {
+			@Override
+			public void widgetDisposed(DisposeEvent e) {
+				refreshJob.cancel();
+			}
+		});
 		if (treeViewer instanceof NotifyingTreeViewer) {
 			patternFilter.setUseCache(true);
 		}
@@ -419,13 +430,13 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Creates the tree viewer. Subclasses may override.
-	 *
+	 * 
 	 * @param parent
 	 *            the parent composite
 	 * @param style
 	 *            SWT style bits used to create the tree viewer
 	 * @return the tree viewer
-	 *
+	 * 
 	 * @since 3.3
 	 */
 	protected TreeViewer doCreateTreeViewer(Composite parent, int style) {
@@ -434,17 +445,17 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Return the first item in the tree that matches the filter pattern.
-	 *
+	 * 
 	 * @param items
 	 * @return the first matching TreeItem
 	 */
 	private TreeItem getFirstMatchingItem(TreeItem[] items) {
-		for (TreeItem item : items) {
-			if (patternFilter.isLeafMatch(treeViewer, item.getData())
-					&& patternFilter.isElementSelectable(item.getData())) {
-				return item;
+		for (int i = 0; i < items.length; i++) {
+			if (patternFilter.isLeafMatch(treeViewer, items[i].getData())
+					&& patternFilter.isElementSelectable(items[i].getData())) {
+				return items[i];
 			}
-			TreeItem treeItem = getFirstMatchingItem(item.getItems());
+			TreeItem treeItem = getFirstMatchingItem(items[i].getItems());
 			if (treeItem != null) {
 				return treeItem;
 			}
@@ -454,7 +465,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Create the refresh job for the receiver.
-	 *
+	 * 
 	 */
 	private void createRefreshJob() {
 		refreshJob = doCreateRefreshJob();
@@ -464,9 +475,9 @@ public class FilteredTree extends Composite {
 	/**
 	 * Creates a workbench job that will refresh the tree based on the current filter text.
 	 * Subclasses may override.
-	 *
+	 * 
 	 * @return a workbench job that can be scheduled to refresh the tree
-	 *
+	 * 
 	 * @since 3.4
 	 */
 	protected WorkbenchJob doCreateRefreshJob() {
@@ -501,7 +512,8 @@ public class FilteredTree extends Composite {
 					if (!narrowingDown) {
 						// collapse all
 						TreeItem[] is = treeViewer.getTree().getItems();
-						for (TreeItem item : is) {
+						for (int i = 0; i < is.length; i++) {
+							TreeItem item = is[i];
 							if (item.getExpanded()) {
 								treeViewer.setExpandedState(item.getData(),
 										false);
@@ -534,7 +546,7 @@ public class FilteredTree extends Composite {
 						// enabled toolbar - there is text to clear
 						// and the list is currently being filtered
 						updateToolbar(true);
-
+						
 						if (cancel) {
 							return Status.CANCEL_STATUS;
 						}
@@ -560,7 +572,7 @@ public class FilteredTree extends Composite {
 			/**
 			 * Returns true if the job should be canceled (because of timeout or
 			 * actual cancellation).
-			 *
+			 * 
 			 * @param items
 			 * @param monitor
 			 * @param cancelTime
@@ -613,7 +625,7 @@ public class FilteredTree extends Composite {
 	 * {@link #doCreateFilterText(Composite)} to create the text control.
 	 * Subclasses should override {@link #doCreateFilterText(Composite)} instead
 	 * of overriding this method.
-	 *
+	 * 
 	 * @param parent
 	 *            <code>Composite</code> of the filter text
 	 */
@@ -645,9 +657,9 @@ public class FilteredTree extends Composite {
 					private int getFilteredItemsCount() {
 						int total = 0;
 						TreeItem[] items = getViewer().getTree().getItems();
-						for (TreeItem item : items) {
-							total += itemCount(item);
-
+						for (int i = 0; i < items.length; i++) {
+							total += itemCount(items[i]);
+							
 						}
 						return total;
 					}
@@ -660,9 +672,9 @@ public class FilteredTree extends Composite {
 					private int itemCount(TreeItem treeItem) {
 						int count = 1;
 						TreeItem[] children = treeItem.getItems();
-						for (TreeItem element : children) {
-							count += itemCount(element);
-
+						for (int i = 0; i < children.length; i++) {
+							count += itemCount(children[i]);
+							
 						}
 						return count;
 					}
@@ -677,11 +689,14 @@ public class FilteredTree extends Composite {
 					 * using mouse to give focus to text.
 					 */
 					Display display= filterText.getDisplay();
-					display.asyncExec(() -> {
-						if (!filterText.isDisposed()) {
-							if (getInitialText().equals(
-									filterText.getText().trim())) {
-								filterText.selectAll();
+					display.asyncExec(new Runnable() {
+						@Override
+						public void run() {
+							if (!filterText.isDisposed()) {
+								if (getInitialText().equals(
+										filterText.getText().trim())) {
+									filterText.selectAll();
+								}
 							}
 						}
 					});
@@ -727,26 +742,37 @@ public class FilteredTree extends Composite {
 		});
 
 		// enter key set focus to tree
-		filterText.addTraverseListener(e -> {
-			if (quickSelectionMode) {
-				return;
-			}
-			if (e.detail == SWT.TRAVERSE_RETURN) {
-				e.doit = false;
-				updateTreeSelection(true);
+		filterText.addTraverseListener(new TraverseListener() {
+			@Override
+			public void keyTraversed(TraverseEvent e) {
+				if (quickSelectionMode) {
+					return;
+				}
+				if (e.detail == SWT.TRAVERSE_RETURN) {
+					e.doit = false;
+					updateTreeSelection(true);
+				}
 			}
 		});
 
-		filterText.addModifyListener(e -> textChanged());
+		filterText.addModifyListener(new ModifyListener() {
+			@Override
+			public void modifyText(ModifyEvent e) {
+				textChanged();
+			}
+		});
 
 		// if we're using a field with built in cancel we need to listen for
 		// default selection changes (which tell us the cancel button has been
 		// pressed)
 		if ((filterText.getStyle() & SWT.ICON_CANCEL) != 0) {
-			filterText.addSelectionListener(widgetDefaultSelectedAdapter(e -> {
-				if (e.detail == SWT.ICON_CANCEL)
-					clearText();
-			}));
+			filterText.addSelectionListener(new SelectionAdapter() {
+				@Override
+				public void widgetDefaultSelected(SelectionEvent e) {
+					if (e.detail == SWT.ICON_CANCEL)
+						clearText();
+				}
+			});
 		}
 
 		GridData gridData= new GridData(SWT.FILL, SWT.CENTER, true, false);
@@ -759,7 +785,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Updates the selection in the tree, based on the filter text.
-	 *
+	 * 
 	 * @param setFocus
 	 *            <code>true</code> if the focus should be set on the tree,
 	 *            <code>false</code> otherwise
@@ -793,11 +819,11 @@ public class FilteredTree extends Composite {
 	/**
 	 * Creates the text control for entering the filter text. Subclasses may
 	 * override.
-	 *
+	 * 
 	 * @param parent
 	 *            the parent composite
 	 * @return the text widget
-	 *
+	 * 
 	 * @since 3.3
 	 */
 	protected Text doCreateFilterText(Composite parent) {
@@ -825,13 +851,13 @@ public class FilteredTree extends Composite {
 		refreshJob.cancel();
 		refreshJob.schedule(getRefreshJobDelay());
 	}
-
+	
 	/**
 	 * Return the time delay that should be used when scheduling the
 	 * filter refresh job.  Subclasses may override.
-	 *
+	 * 
 	 * @return a time delay in milliseconds before the job should run
-	 *
+	 * 
 	 * @since 3.5
 	 */
 	protected long getRefreshJobDelay() {
@@ -840,7 +866,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Set the background for the widgets that support the filter text area.
-	 *
+	 * 
 	 * @param background
 	 *            background <code>Color</code> to set
 	 */
@@ -857,7 +883,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Create the button that clears the text.
-	 *
+	 * 
 	 * @param parent
 	 *            parent <code>Composite</code> of toolbar button
 	 */
@@ -888,7 +914,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Create the button that clears the text.
-	 *
+	 * 
 	 * @param parent parent <code>Composite</code> of toolbar button
 	 */
 	private void createClearTextNew(Composite parent) {
@@ -898,7 +924,7 @@ public class FilteredTree extends Composite {
 			final Image inactiveImage= JFaceResources.getImageRegistry().getDescriptor(DISABLED_CLEAR_ICON).createImage();
 			final Image activeImage= JFaceResources.getImageRegistry().getDescriptor(CLEAR_ICON).createImage();
 			final Image pressedImage= new Image(getDisplay(), activeImage, SWT.IMAGE_GRAY);
-
+			
 			final Label clearButton= new Label(parent, SWT.NONE);
 			clearButton.setLayoutData(new GridData(SWT.BEGINNING, SWT.CENTER, false, false));
 			clearButton.setImage(inactiveImage);
@@ -938,7 +964,7 @@ public class FilteredTree extends Composite {
 						}
 					}
 				}
-
+				
 				private boolean isMouseInButton(MouseEvent e) {
 					Point buttonSize = clearButton.getSize();
 					return 0 <= e.x && e.x < buttonSize.x && 0 <= e.y && e.y < buttonSize.y;
@@ -959,10 +985,13 @@ public class FilteredTree extends Composite {
 				public void mouseHover(MouseEvent e) {
 				}
 			});
-			clearButton.addDisposeListener(e -> {
-				inactiveImage.dispose();
-				activeImage.dispose();
-				pressedImage.dispose();
+			clearButton.addDisposeListener(new DisposeListener() {
+				@Override
+				public void widgetDisposed(DisposeEvent e) {
+					inactiveImage.dispose();
+					activeImage.dispose();
+					pressedImage.dispose();
+				}
 			});
 			clearButton.getAccessible().addAccessibleListener(
 				new AccessibleAdapter() {
@@ -992,7 +1021,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Set the text in the filter control.
-	 *
+	 * 
 	 * @param string
 	 */
 	protected void setFilterText(String string) {
@@ -1004,7 +1033,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Returns the pattern filter used by this tree.
-	 *
+	 * 
 	 * @return The pattern filter; never <code>null</code>.
 	 */
 	public final PatternFilter getPatternFilter() {
@@ -1013,7 +1042,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Get the tree viewer of the receiver.
-	 *
+	 * 
 	 * @return the tree viewer
 	 */
 	public TreeViewer getViewer() {
@@ -1023,7 +1052,7 @@ public class FilteredTree extends Composite {
 	/**
 	 * Get the filter text for the receiver, if it was created. Otherwise return
 	 * <code>null</code>.
-	 *
+	 * 
 	 * @return the filter Text, or null if it was not created
 	 */
 	public Text getFilterControl() {
@@ -1033,7 +1062,7 @@ public class FilteredTree extends Composite {
 	/**
 	 * Convenience method to return the text of the filter control. If the text
 	 * widget is not created, then null is returned.
-	 *
+	 * 
 	 * @return String in the text, or null if the text does not exist
 	 */
 	protected String getFilterString() {
@@ -1044,7 +1073,7 @@ public class FilteredTree extends Composite {
 	 * Set the text that will be shown until the first focus. A default value is
 	 * provided, so this method only need be called if overriding the default
 	 * initial text is desired.
-	 *
+	 * 
 	 * @param text
 	 *            initial text to appear in text field
 	 */
@@ -1056,10 +1085,13 @@ public class FilteredTree extends Composite {
 				setFilterText(initialText);
 				textChanged();
 			} else {
-				getDisplay().asyncExec(() -> {
-					if (!filterText.isDisposed() && filterText.isFocusControl()) {
-						setFilterText(initialText);
-						textChanged();
+				getDisplay().asyncExec(new Runnable() {
+					@Override
+					public void run() {
+						if (!filterText.isDisposed() && filterText.isFocusControl()) {
+							setFilterText(initialText);
+							textChanged();
+						}
 					}
 				});
 			}
@@ -1076,7 +1108,7 @@ public class FilteredTree extends Composite {
 	 * <p>
 	 * By default, this is set to <code>false</code>.
 	 * </p>
-	 *
+	 * 
 	 * @param enabled
 	 *            <code>true</code> if this filtered tree is used to make quick
 	 *            selections, <code>false</code> otherwise
@@ -1088,7 +1120,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Select all text in the filter text field.
-	 *
+	 * 
 	 */
 	protected void selectAll() {
 		if (filterText != null) {
@@ -1098,7 +1130,7 @@ public class FilteredTree extends Composite {
 
 	/**
 	 * Get the initial text for the receiver.
-	 *
+	 * 
 	 * @return String
 	 */
 	protected String getInitialText() {
@@ -1109,14 +1141,14 @@ public class FilteredTree extends Composite {
 	 * Return a bold font if the given element matches the given pattern.
 	 * Clients can opt to call this method from a Viewer's label provider to get
 	 * a bold font for which to highlight the given element in the tree.
-	 *
+	 * 
 	 * @param element
 	 *            element for which a match should be determined
 	 * @param tree
 	 *            FilteredTree in which the element resides
 	 * @param filter
 	 *            PatternFilter which determines a match
-	 *
+	 * 
 	 * @return bold font
 	 */
 	public static Font getBoldFont(Object element, FilteredTree tree,
@@ -1151,9 +1183,9 @@ public class FilteredTree extends Composite {
 	/**
 	 * Custom tree viewer subclass that clears the caches in patternFilter on
 	 * any change to the tree. See bug 187200.
-	 *
+	 * 
 	 * @since 3.3
-	 *
+	 * 
 	 */
 	class NotifyingTreeViewer extends TreeViewer {
 
