@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2010 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -24,7 +24,7 @@ import org.eclipse.ui.actions.RetargetAction;
 
 /**
  * An <code>EditorMenuManager</code> is used to sort the contributions
- * made by an editor so that they always appear after the action sets.
+ * made by an editor so that they always appear after the action sets.  
  */
 public class EditorMenuManager extends SubMenuManager {
     private ArrayList wrappers;
@@ -38,7 +38,9 @@ public class EditorMenuManager extends SubMenuManager {
          */
         public void updateEnabledAllowed() {
             // update the items in the map
-			for (IContributionItem item : EditorMenuManager.super.getItems()) {
+            IContributionItem[] items = EditorMenuManager.super.getItems();
+            for (int i = 0; i < items.length; i++) {
+                IContributionItem item = items[i];
                 item.update(IContributionManagerOverrides.P_ENABLED);
             }
             // update the wrapped menus
@@ -69,7 +71,7 @@ public class EditorMenuManager extends SubMenuManager {
                         item);
 			} else {
 				// no acclerator if the item is disabled
-				return Integer.valueOf(0);
+                return new Integer(0);
 			}
         }
 
@@ -83,7 +85,7 @@ public class EditorMenuManager extends SubMenuManager {
 		public String getText(IContributionItem item) {
             return getParentMenuManager().getOverrides().getText(item);
         }
-
+        
         @Override
 		public Boolean getVisible(IContributionItem item) {
         	return getParentMenuManager().getOverrides().getVisible(item);
@@ -145,7 +147,7 @@ public class EditorMenuManager extends SubMenuManager {
     public void setVisible(boolean visible, boolean forceVisibility) {
         if (visible) {
             if (forceVisibility) {
-                // Make the items visible
+                // Make the items visible 
                 if (!enabledAllowed) {
 					setEnabledAllowed(true);
 				}
@@ -199,8 +201,9 @@ public class EditorMenuManager extends SubMenuManager {
     }
 
     protected void getAllContributedActions(HashSet set) {
-		for (IContributionItem item : super.getItems()) {
-			getAllContributedActions(set, item);
+        IContributionItem[] items = super.getItems();
+        for (int i = 0; i < items.length; i++) {
+			getAllContributedActions(set, items[i]);
 		}
         if (wrappers == null) {
 			return;
@@ -213,8 +216,9 @@ public class EditorMenuManager extends SubMenuManager {
 
     protected void getAllContributedActions(HashSet set, IContributionItem item) {
         if (item instanceof MenuManager) {
-			for (IContributionItem subItem : ((MenuManager) item).getItems()) {
-				getAllContributedActions(set, subItem);
+            IContributionItem subItems[] = ((MenuManager) item).getItems();
+            for (int j = 0; j < subItems.length; j++) {
+				getAllContributedActions(set, subItems[j]);
 			}
         } else if (item instanceof ActionContributionItem) {
             set.add(((ActionContributionItem) item).getAction());
