@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2017 IBM Corporation and others.
+ * Copyright (c) 2006, 2014 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,29 +7,24 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *     Andrey Loskutov <loskutov@gmx.de> - Bug 372799
- *     Patrik Suzzi <psuzzi@gmail.com> - Bug 490700, 511198
  *******************************************************************************/
 
 package org.eclipse.ui.internal;
 
-import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
-
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.Set;
 import org.eclipse.core.runtime.Assert;
 import org.eclipse.core.runtime.AssertionFailedException;
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.ListenerList;
-import org.eclipse.core.runtime.SubMonitor;
+import org.eclipse.core.runtime.SubProgressMonitor;
 import org.eclipse.jface.dialogs.IDialogConstants;
 import org.eclipse.jface.dialogs.MessageDialog;
 import org.eclipse.jface.dialogs.MessageDialogWithToggle;
@@ -42,6 +37,8 @@ import org.eclipse.jface.viewers.IStructuredContentProvider;
 import org.eclipse.jface.window.IShellProvider;
 import org.eclipse.osgi.util.NLS;
 import org.eclipse.swt.SWT;
+import org.eclipse.swt.events.SelectionAdapter;
+import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.layout.GridLayout;
 import org.eclipse.swt.widgets.Button;
@@ -67,37 +64,36 @@ import org.eclipse.ui.model.WorkbenchPartLabelProvider;
 
 /**
  * The model manager maintains a list of open saveable models.
- *
+ * 
  * @see Saveable
  * @see ISaveablesSource
- *
+ * 
  * @since 3.2
  */
 public class SaveablesList implements ISaveablesLifecycleListener {
 
-	private ListenerList<ISaveablesLifecycleListener> listeners = new ListenerList<>();
+	private ListenerList listeners = new ListenerList();
 
 	// event source (mostly ISaveablesSource) -> Set of Saveable
-	private Map<Object, Set<Saveable>> modelMap = new HashMap<>();
+	private Map modelMap = new HashMap();
 
-	// reference counting map
-	private Map<Saveable, Integer> modelRefCounts = new HashMap<>();
+	// reference counting map, Saveable -> Integer
+	private Map modelRefCounts = new HashMap();
 
-	private Set<ISaveablesSource> nonPartSources = new HashSet<>();
+	private Set nonPartSources = new HashSet();
 
 	/**
 	 * Returns the list of open models managed by this model manager.
-	 *
+	 * 
 	 * @return a list of models
 	 */
 	public Saveable[] getOpenModels() {
-		Set<Saveable> allDistinctModels = new HashSet<>();
-		Iterator<Set<Saveable>> saveables = modelMap.values().iterator();
-		while (saveables.hasNext()) {
-			allDistinctModels.addAll(saveables.next());
-		}
-
-		return allDistinctModels.toArray(
+		Set allDistinctModels = new HashSet();
+		Iterator saveables = modelMap.values().iterator();
+		while (saveables.hasNext())
+			allDistinctModels.addAll((Set)saveables.next());
+		
+		return (Saveable[]) allDistinctModels.toArray(
 				new Saveable[allDistinctModels.size()]);
 	}
 
@@ -109,9 +105,9 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 			return false;
 		}
 		boolean result = false;
-		Set<Saveable> modelsForSource = modelMap.get(source);
+		Set modelsForSource = (Set) modelMap.get(source);
 		if (modelsForSource == null) {
-			modelsForSource = new HashSet<>();
+			modelsForSource = new HashSet();
 			modelMap.put(source, modelsForSource);
 		}
 		if (modelsForSource.add(model)) {
@@ -125,39 +121,39 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 
 	/**
 	 * returns true if the given key was added for the first time
-	 *
+	 * 
 	 * @param referenceMap
 	 * @param key
 	 * @return true if the ref count of the given key is now 1
 	 */
-	private boolean incrementRefCount(Map<Saveable, Integer> referenceMap, Saveable key) {
+	private boolean incrementRefCount(Map referenceMap, Object key) {
 		boolean result = false;
-		Integer refCount = referenceMap.get(key);
+		Integer refCount = (Integer) referenceMap.get(key);
 		if (refCount == null) {
 			result = true;
-			refCount = Integer.valueOf(0);
+			refCount = new Integer(0);
 		}
-		referenceMap.put(key, Integer.valueOf(refCount.intValue() + 1));
+		referenceMap.put(key, new Integer(refCount.intValue() + 1));
 		return result;
 	}
 
 	/**
 	 * returns true if the given key has been removed
-	 *
+	 * 
 	 * @param referenceMap
 	 * @param key
 	 * @return true if the ref count of the given key was 1
 	 */
-	private boolean decrementRefCount(Map<Saveable, Integer> referenceMap, Saveable key) {
+	private boolean decrementRefCount(Map referenceMap, Object key) {
 		boolean result = false;
-		Integer refCount = referenceMap.get(key);
+		Integer refCount = (Integer) referenceMap.get(key);
 		if (refCount == null)
-			Assert.isTrue(false, key + ": " + key.getName()); //$NON-NLS-1$
+			Assert.isTrue(false, key + ": " + ((Saveable) key).getName()); //$NON-NLS-1$
 		if (refCount.intValue() == 1) {
 			referenceMap.remove(key);
 			result = true;
 		} else {
-			referenceMap.put(key, Integer.valueOf(refCount.intValue() - 1));
+			referenceMap.put(key, new Integer(refCount.intValue() - 1));
 		}
 		return result;
 	}
@@ -165,7 +161,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	// returns true if this model was removed from getModels();
 	private boolean removeModel(Object source, Saveable model) {
 		boolean result = false;
-		Set<Saveable> modelsForSource = modelMap.get(source);
+		Set modelsForSource = (Set) modelMap.get(source);
 		if (modelsForSource == null) {
 			logWarning(
 					"Ignored attempt to remove a saveable when no saveables were known", source, model); //$NON-NLS-1$
@@ -184,7 +180,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	}
 
 	private void logWarning(String message, Object source, Saveable model) {
-		// create a new exception
+		// create a new exception 
 		AssertionFailedException assertionFailedException = new AssertionFailedException("unknown saveable: " + model //$NON-NLS-1$
 				+ " from part: " + source); //$NON-NLS-1$
 		// record the current stack trace to help with debugging
@@ -227,10 +223,10 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 			break;
 		case SaveablesLifecycleEvent.PRE_CLOSE:
 			Saveable[] models = event.getSaveables();
-			Map<Saveable, Integer> modelsDecrementing = new HashMap<>();
-			Set<Saveable> modelsClosing = new HashSet<>();
-			for (Saveable model : models) {
-				incrementRefCount(modelsDecrementing, model);
+			Map modelsDecrementing = new HashMap();
+			Set modelsClosing = new HashSet();
+			for (int i = 0; i < models.length; i++) {
+				incrementRefCount(modelsDecrementing, models[i]);
 			}
 
 			fillModelsClosing(modelsClosing, modelsDecrementing);
@@ -269,15 +265,16 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param modelArray
 	 */
 	private void removeModels(Object source, Saveable[] modelArray) {
-		List<Saveable> removed = new ArrayList<>();
-		for (Saveable model : modelArray) {
+		List removed = new ArrayList();
+		for (int i = 0; i < modelArray.length; i++) {
+			Saveable model = modelArray[i];
 			if (removeModel(source, model)) {
 				removed.add(model);
 			}
 		}
 		if (removed.size() > 0) {
 			fireModelLifecycleEvent(new SaveablesLifecycleEvent(this,
-					SaveablesLifecycleEvent.POST_OPEN, removed
+					SaveablesLifecycleEvent.POST_OPEN, (Saveable[]) removed
 							.toArray(new Saveable[removed.size()]), false));
 		}
 	}
@@ -287,15 +284,16 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param modelArray
 	 */
 	private void addModels(Object source, Saveable[] modelArray) {
-		List<Saveable> added = new ArrayList<>();
-		for (Saveable model : modelArray) {
+		List added = new ArrayList();
+		for (int i = 0; i < modelArray.length; i++) {
+			Saveable model = modelArray[i];
 			if (addModel(source, model)) {
 				added.add(model);
 			}
 		}
 		if (added.size() > 0) {
 			fireModelLifecycleEvent(new SaveablesLifecycleEvent(this,
-					SaveablesLifecycleEvent.POST_OPEN, added
+					SaveablesLifecycleEvent.POST_OPEN, (Saveable[]) added
 							.toArray(new Saveable[added.size()]), false));
 		}
 	}
@@ -304,8 +302,10 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param event
 	 */
 	private void fireModelLifecycleEvent(SaveablesLifecycleEvent event) {
-		for (ISaveablesLifecycleListener listener : listeners) {
-			listener.handleLifecycleEvent(event);
+		Object[] listenerArray = listeners.getListeners();
+		for (int i = 0; i < listenerArray.length; i++) {
+			((ISaveablesLifecycleListener) listenerArray[i])
+					.handleLifecycleEvent(event);
 		}
 	}
 
@@ -320,7 +320,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * <p>
 	 * Listeners should ignore all other event types, including PRE_CLOSE. There
 	 * is no guarantee that listeners are notified before models are closed.
-	 *
+	 * 
 	 * @param listener
 	 */
 	public void addModelLifecycleListener(ISaveablesLifecycleListener listener) {
@@ -330,7 +330,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	/**
 	 * Removes the given listener from the list of listeners. Has no effect if
 	 * the given listener is not contained in the list.
-	 *
+	 * 
 	 * @param listener
 	 */
 	public void removeModelLifecycleListener(ISaveablesLifecycleListener listener) {
@@ -343,31 +343,32 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param window
 	 * @return the post close info to be passed to postClose
 	 */
-	public Object preCloseParts(List<IWorkbenchPart> partsToClose, boolean save,
+	public Object preCloseParts(List partsToClose, boolean save,
 			final IWorkbenchWindow window) {
 		return preCloseParts(partsToClose, save, window, window);
 	}
 
-	public Object preCloseParts(List<IWorkbenchPart> partsToClose, boolean save, IShellProvider shellProvider,
+	public Object preCloseParts(List partsToClose, boolean save, IShellProvider shellProvider,
 			final IWorkbenchWindow window) {
 		return preCloseParts(partsToClose, false, save, shellProvider, window);
 	}
 
-	public Object preCloseParts(List<IWorkbenchPart> partsToClose, boolean addNonPartSources, boolean save,
+	public Object preCloseParts(List partsToClose, boolean addNonPartSources, boolean save,
 			IShellProvider shellProvider, final IWorkbenchWindow window) {
 		// reference count (how many occurrences of a model will go away?)
 		PostCloseInfo postCloseInfo = new PostCloseInfo();
-		for (IWorkbenchPart part : partsToClose) {
+		for (Iterator it = partsToClose.iterator(); it.hasNext();) {
+			IWorkbenchPart part = (IWorkbenchPart) it.next();
 			postCloseInfo.partsClosing.add(part);
-			ISaveablePart saveable = SaveableHelper.getSaveable(part);
-			if (saveable != null) {
-				if (save && !saveable.isSaveOnCloseNeeded()) {
+			if (part instanceof ISaveablePart) {
+				ISaveablePart saveablePart = (ISaveablePart) part;
+				if (save && !saveablePart.isSaveOnCloseNeeded()) {
 					// pretend for now that this part is not closing
 					continue;
 				}
 			}
-			if (save && saveable instanceof ISaveablePart2) {
-				ISaveablePart2 saveablePart2 = (ISaveablePart2) saveable;
+			if (save && part instanceof ISaveablePart2) {
+				ISaveablePart2 saveablePart2 = (ISaveablePart2) part;
 				// TODO show saveablePart2 before prompting, see
 				// EditorManager.saveAll
 				int response = SaveableHelper.savePart(saveablePart2, window,
@@ -381,8 +382,10 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 					continue;
 				}
 			}
-			for (Saveable saveableModel : getSaveables(part)) {
-				incrementRefCount(postCloseInfo.modelsDecrementing, saveableModel);
+			Saveable[] modelsFromSource = getSaveables(part);
+			for (int i = 0; i < modelsFromSource.length; i++) {
+				incrementRefCount(postCloseInfo.modelsDecrementing,
+						modelsFromSource[i]);
 			}
 		}
 		fillModelsClosing(postCloseInfo.modelsClosing,
@@ -414,30 +417,31 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @return true if the user canceled
 	 */
 	private boolean promptForSavingIfNecessary(final IWorkbenchWindow window,
-			Set<Saveable> modelsClosing, Map<Saveable, Integer> modelsDecrementing, boolean canCancel) {
+			Set modelsClosing, Map modelsDecrementing, boolean canCancel) {
 		return promptForSavingIfNecessary(window, window, modelsClosing, modelsDecrementing,
 				canCancel);
 	}
 
 	private boolean promptForSavingIfNecessary(IShellProvider shellProvider,
- IWorkbenchWindow window,
-			Set<Saveable> modelsClosing, Map<Saveable, Integer> modelsDecrementing, boolean canCancel) {
-		List<Saveable> modelsToOptionallySave = new ArrayList<>();
-		for (Saveable modelDecrementing : modelsDecrementing.keySet()) {
+			IWorkbenchWindow window, Set modelsClosing, Map modelsDecrementing, boolean canCancel) {
+		List modelsToOptionallySave = new ArrayList();
+		for (Iterator it = modelsDecrementing.keySet().iterator(); it.hasNext();) {
+			Saveable modelDecrementing = (Saveable) it.next();
 			if (modelDecrementing.isDirty() && !modelsClosing.contains(modelDecrementing)) {
 				modelsToOptionallySave.add(modelDecrementing);
 			}
 		}
-
+		
 		boolean shouldCancel = modelsToOptionallySave.isEmpty() ? false : promptForSaving(
 				modelsToOptionallySave, shellProvider, window, canCancel, true);
-
+		
 		if (shouldCancel) {
 			return true;
 		}
 
-		List<Saveable> modelsToSave = new ArrayList<>();
-		for (Saveable modelClosing : modelsClosing) {
+		List modelsToSave = new ArrayList();
+		for (Iterator it = modelsClosing.iterator(); it.hasNext();) {
+			Saveable modelClosing = (Saveable) it.next();
 			if (modelClosing.isDirty()) {
 				modelsToSave.add(modelClosing);
 			}
@@ -450,10 +454,10 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param modelsClosing
 	 * @param modelsDecrementing
 	 */
-	private void fillModelsClosing(Set<Saveable> modelsClosing, Map<Saveable, Integer> modelsDecrementing) {
-		for (Entry<Saveable, Integer> entry : modelsDecrementing.entrySet()) {
-			Saveable model = entry.getKey();
-			if (entry.getValue().equals(modelRefCounts.get(model))) {
+	private void fillModelsClosing(Set modelsClosing, Map modelsDecrementing) {
+		for (Iterator it = modelsDecrementing.keySet().iterator(); it.hasNext();) {
+			Saveable model = (Saveable) it.next();
+			if (modelsDecrementing.get(model).equals(modelRefCounts.get(model))) {
 				modelsClosing.add(model);
 			}
 		}
@@ -471,7 +475,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param stillOpenElsewhere whether the models are referenced by open parts
 	 * @return true if the user canceled
 	 */
-	public boolean promptForSaving(List<Saveable> modelsToSave,
+	public boolean promptForSaving(List modelsToSave,
 			final IShellProvider shellProvider, IRunnableContext runnableContext, final boolean canCancel, boolean stillOpenElsewhere) {
 		// Save parts, exit the method if cancel is pressed.
 		if (modelsToSave.size() > 0) {
@@ -487,28 +491,30 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 				modelsToSave.clear();
 				return false;
 			} else if (modelsToSave.size() == 1) {
-				Saveable model = modelsToSave.get(0);
+				Saveable model = (Saveable) modelsToSave.get(0);
 				// Show a dialog.
+				String[] buttons;
+				if(canCancel) {
+					buttons = new String[] { IDialogConstants.YES_LABEL,
+							IDialogConstants.NO_LABEL,
+							IDialogConstants.CANCEL_LABEL };
+				} else {
+					buttons = new String[] { IDialogConstants.YES_LABEL,
+							IDialogConstants.NO_LABEL};
+				}
 
 				// don't save if we don't prompt
 				int choice = ISaveablePart2.NO;
-
+				
 				MessageDialog dialog;
 				if (stillOpenElsewhere) {
-					LinkedHashMap<String, Integer> buttonLabelToIdMap = new LinkedHashMap<>();
-					buttonLabelToIdMap.put(WorkbenchMessages.SaveableHelper_Save, IDialogConstants.OK_ID);
-					buttonLabelToIdMap.put(WorkbenchMessages.SaveableHelper_Dont_Save, IDialogConstants.NO_ID);
-					if (canCancel) {
-						buttonLabelToIdMap.put(WorkbenchMessages.SaveableHelper_Cancel, IDialogConstants.CANCEL_ID);
-					}
 					String message = NLS
 							.bind(
 									WorkbenchMessages.EditorManager_saveChangesOptionallyQuestion,
 									model.getName());
 					MessageDialogWithToggle dialogWithToggle = new MessageDialogWithToggle(shellProvider.getShell(),
 							WorkbenchMessages.Save_Resource, null, message,
-							MessageDialog.QUESTION, buttonLabelToIdMap, 0,
-							WorkbenchMessages.EditorManager_closeWithoutPromptingOption, false) {
+							MessageDialog.QUESTION, buttons, 0, WorkbenchMessages.EditorManager_closeWithoutPromptingOption, false) {
 						@Override
 						protected int getShellStyle() {
 							return (canCancel ? SWT.CLOSE : SWT.NONE)
@@ -519,22 +525,13 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 					};
 					dialog = dialogWithToggle;
 				} else {
-					String[] buttons;
-					if (canCancel) {
-						buttons = new String[] { WorkbenchMessages.SaveableHelper_Save,
-								WorkbenchMessages.SaveableHelper_Dont_Save, WorkbenchMessages.SaveableHelper_Cancel };
-					} else {
-						buttons = new String[] { WorkbenchMessages.SaveableHelper_Save,
-								WorkbenchMessages.SaveableHelper_Dont_Save };
-					}
-
 					String message = NLS
 							.bind(
 									WorkbenchMessages.EditorManager_saveChangesQuestion,
 									model.getName());
 					dialog = new MessageDialog(shellProvider.getShell(),
 							WorkbenchMessages.Save_Resource, null, message,
-							MessageDialog.QUESTION, 0, buttons) {
+							MessageDialog.QUESTION, buttons, 0) {
 						@Override
 						protected int getShellStyle() {
 							return (canCancel ? SWT.CLOSE : SWT.NONE)
@@ -548,7 +545,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 				choice = SaveableHelper.testGetAutomatedResponse();
 				if (SaveableHelper.testGetAutomatedResponse() == SaveableHelper.USER_RESPONSE) {
 					choice = dialog.open();
-
+					
 					if(stillOpenElsewhere) {
 						// map value of choice back to ISaveablePart2 values
 						switch (choice) {
@@ -606,14 +603,8 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 					if (dlg.getDontPromptSelection()) {
 						apiPreferenceStore.setValue(IWorkbenchPreferenceConstants.PROMPT_WHEN_SAVEABLE_STILL_OPEN, false);
 					}
-
-					modelsToSave = new ArrayList<>();
-					Object[] objects = dlg.getResult();
-					for (Object object : objects) {
-						if (object instanceof Saveable) {
-							modelsToSave.add((Saveable) object);
-						}
-					}
+					
+					modelsToSave = Arrays.asList(dlg.getResult());
 				}
 			}
 		}
@@ -631,7 +622,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 *            use a workbench window for this.
 	 * @return <code>true</code> if the operation was canceled
 	 */
-	public boolean saveModels(final List<Saveable> finalModels, final IShellProvider shellProvider,
+	public boolean saveModels(final List finalModels, final IShellProvider shellProvider,
 			IRunnableContext runnableContext) {
 		return saveModels(finalModels, shellProvider, runnableContext, true);
 	}
@@ -651,25 +642,29 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param blockUntilSaved
 	 * @return <code>true</code> if the operation was canceled
 	 */
-	public boolean saveModels(final List<Saveable> finalModels, final IShellProvider shellProvider,
+	public boolean saveModels(final List finalModels, final IShellProvider shellProvider,
 			IRunnableContext runnableContext, final boolean blockUntilSaved) {
-		IRunnableWithProgress progressOp = monitor -> {
-			IProgressMonitor monitorWrap = new EventLoopProgressMonitor(monitor);
-			SubMonitor subMonitor = SubMonitor.convert(monitorWrap, WorkbenchMessages.Saving_Modifications,
-					finalModels.size());
-			for (Saveable model : finalModels) {
-				// handle case where this model got saved as a result of
-				// saving another
-				if (!model.isDirty()) {
-					subMonitor.worked(1);
-					continue;
+		IRunnableWithProgress progressOp = new IRunnableWithProgress() {
+			@Override
+			public void run(IProgressMonitor monitor) {
+				IProgressMonitor monitorWrap = new EventLoopProgressMonitor(
+						monitor);
+				monitorWrap.beginTask(WorkbenchMessages.Saving_Modifications, finalModels.size());
+				for (Iterator i = finalModels.iterator(); i.hasNext();) {
+					Saveable model = (Saveable) i.next();
+					// handle case where this model got saved as a result of
+					// saving another
+					if (!model.isDirty()) {
+						monitor.worked(1);
+						continue;
+					}
+					SaveableHelper.doSaveModel(model, new SubProgressMonitor(monitorWrap, 1),
+							shellProvider, blockUntilSaved);
+					if (monitorWrap.isCanceled())
+						break;
 				}
-				SaveableHelper.doSaveModel(model, subMonitor.split(1),
-						shellProvider, blockUntilSaved);
-				if (subMonitor.isCanceled())
-					break;
+				monitorWrap.done();
 			}
-			monitorWrap.done();
 		};
 
 		// Do the save.
@@ -679,11 +674,11 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	}
 
 	private static class PostCloseInfo {
-		private List<IWorkbenchPart> partsClosing = new ArrayList<>();
+		private List partsClosing = new ArrayList();
 
-		private Map<Saveable, Integer> modelsDecrementing = new HashMap<>();
+		private Map modelsDecrementing = new HashMap();
 
-		private Set<Saveable> modelsClosing = new HashSet<>();
+		private Set modelsClosing = new HashSet();
 	}
 
 	/**
@@ -691,14 +686,16 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 */
 	public void postClose(Object postCloseInfoObject) {
 		PostCloseInfo postCloseInfo = (PostCloseInfo) postCloseInfoObject;
-		List<Saveable> removed = new ArrayList<>();
-		for (IWorkbenchPart part : postCloseInfo.partsClosing) {
-			Set<Saveable> saveables = modelMap.get(part);
+		List removed = new ArrayList();
+		for (Iterator it = postCloseInfo.partsClosing.iterator(); it.hasNext();) {
+			IWorkbenchPart part = (IWorkbenchPart) it.next();
+			Set saveables = (Set) modelMap.get(part);
 			if (saveables != null) {
 				// make a copy to avoid a ConcurrentModificationException - we
 				// will remove from the original set as we iterate
-				saveables = new HashSet<>(saveables);
-				for (Saveable saveable : saveables) {
+				saveables = new HashSet(saveables);
+				for (Iterator it2 = saveables.iterator(); it2.hasNext();) {
+					Saveable saveable = (Saveable) it2.next();
 					if (removeModel(part, saveable)) {
 						removed.add(saveable);
 					}
@@ -707,7 +704,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 		}
 		if (removed.size() > 0) {
 			fireModelLifecycleEvent(new SaveablesLifecycleEvent(this,
-					SaveablesLifecycleEvent.POST_CLOSE, removed
+					SaveablesLifecycleEvent.POST_CLOSE, (Saveable[]) removed
 							.toArray(new Saveable[removed.size()]), false));
 		}
 	}
@@ -716,7 +713,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * Returns the saveable models provided by the given part. If the part does
 	 * not provide any models, a default model is returned representing the
 	 * part.
-	 *
+	 * 
 	 * @param part
 	 *            the workbench part
 	 * @return the saveable models
@@ -725,7 +722,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 		if (part instanceof ISaveablesSource) {
 			ISaveablesSource source = (ISaveablesSource) part;
 			return source.getSaveables();
-		} else if (SaveableHelper.isSaveable(part)) {
+		} else if (part instanceof ISaveablePart) {
 			return new Saveable[] { new DefaultSaveable(part) };
 		} else {
 			return new Saveable[0];
@@ -733,14 +730,14 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	}
 
 	/**
-	 * @param part
+	 * @param actualPart
 	 */
 	public void postOpen(IWorkbenchPart part) {
 		addModels(part, getSaveables(part));
 	}
 
 	/**
-	 * @param part
+	 * @param actualPart
 	 */
 	public void dirtyChanged(IWorkbenchPart part) {
 		Saveable[] saveables = getSaveables(part);
@@ -752,14 +749,15 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 
 	/**
 	 * For testing purposes. Not to be called by clients.
-	 *
+	 * 
 	 * @param model
-	 * @return never null
+	 * @return
 	 */
 	public Object[] testGetSourcesForModel(Saveable model) {
-		List<Object> result = new ArrayList<>();
-		for (Entry<Object, Set<Saveable>> entry : modelMap.entrySet()) {
-			Set<Saveable> values = entry.getValue();
+		List result = new ArrayList();
+		for (Iterator it = modelMap.entrySet().iterator(); it.hasNext();) {
+			Map.Entry entry = (Map.Entry) it.next();
+			Set values = (Set) entry.getValue();
 			if (values.contains(model)) {
 				result.add(entry.getKey());
 			}
@@ -787,39 +785,49 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 			setShellStyle(shellStyle | SWT.SHEET);
 		}
 
+		/**
+		 * @return
+		 */
 		public boolean getDontPromptSelection() {
 			return dontPromptSelection;
 		}
 
 		@Override
 		protected void createButtonsForButtonBar(Composite parent) {
-			createButton(parent, IDialogConstants.OK_ID, IDialogConstants.OK_LABEL, true);
+			createButton(parent, IDialogConstants.OK_ID,
+					IDialogConstants.OK_LABEL, true);
 			if (canCancel) {
-				createButton(parent, IDialogConstants.CANCEL_ID, IDialogConstants.CANCEL_LABEL, false);
+				createButton(parent, IDialogConstants.CANCEL_ID,
+						IDialogConstants.CANCEL_LABEL, false);
 			}
 		}
-
+		
 		@Override
 		protected Control createDialogArea(Composite parent) {
 			 Composite dialogAreaComposite = (Composite) super.createDialogArea(parent);
-
+			 
 			 if (stillOpenElsewhere) {
 				 Composite checkboxComposite = new Composite(dialogAreaComposite, SWT.NONE);
 				 checkboxComposite.setLayout(new GridLayout(2, false));
-
+				 
 				 checkbox = new Button(checkboxComposite, SWT.CHECK);
-				 checkbox.addSelectionListener(widgetSelectedAdapter(e -> dontPromptSelection = checkbox.getSelection()));
+				 checkbox.addSelectionListener(new SelectionAdapter() {
+					@Override
+					public void widgetSelected(SelectionEvent e) {
+						dontPromptSelection = checkbox.getSelection();
+					}
+				 });
 				 GridData gd = new GridData();
 				 gd.horizontalAlignment = SWT.BEGINNING;
 				 checkbox.setLayoutData(gd);
-
+				 
 				 Label label = new Label(checkboxComposite, SWT.NONE);
 				 label.setText(WorkbenchMessages.EditorManager_closeWithoutPromptingOption);
 				 gd = new GridData();
 				 gd.grabExcessHorizontalSpace = true;
 				 gd.horizontalAlignment = SWT.BEGINNING;
 			 }
-
+			 
 			 return dialogAreaComposite;
 		}
 	}
@@ -829,19 +837,23 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 *         list which are not workbench parts.
 	 */
 	public ISaveablesSource[] getNonPartSources() {
-		return nonPartSources
+		return (ISaveablesSource[]) nonPartSources
 				.toArray(new ISaveablesSource[nonPartSources.size()]);
 	}
 
+	/**
+	 * @param model
+	 */
 	public IWorkbenchPart[] getPartsForSaveable(Saveable model) {
-		List<IWorkbenchPart> result = new ArrayList<>();
-		for (Entry<Object, Set<Saveable>> entry : modelMap.entrySet()) {
-			Set<Saveable> values = entry.getValue();
+		List result = new ArrayList();
+		for (Iterator it = modelMap.entrySet().iterator(); it.hasNext();) {
+			Map.Entry entry = (Map.Entry) it.next();
+			Set values = (Set) entry.getValue();
 			if (values.contains(model) && entry.getKey() instanceof IWorkbenchPart) {
-				result.add((IWorkbenchPart) entry.getKey());
+				result.add(entry.getKey());
 			}
 		}
-		return result.toArray(new IWorkbenchPart[result.size()]);
+		return (IWorkbenchPart[]) result.toArray(new IWorkbenchPart[result.size()]);
 	}
 
 }
