@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2003, 2016 IBM Corporation and others.
+ * Copyright (c) 2003, 2014 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,15 +7,11 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *     Cornel Izbasa <cizbasa@info.uvt.ro> - Bug 436247
- *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 440136, 472654
- *     Robert Roth <robert.roth.off@gmail.com> - Bugs 274005, 456291
- *     Mickael Istria (Red Hat Inc.) - Theme and fontregistry rather than pref
- *     Patrik Suzzi <psuzzi@gmail.com> - Bug 489250
+ *     Cornel Izbasa <cizbasa@info.uvt.ro> - Bug https://bugs.eclipse.org/436247
+ *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 440136
  *******************************************************************************/
 package org.eclipse.ui.internal.themes;
 
-import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
 import static org.eclipse.ui.internal.themes.WorkbenchThemeManager.EMPTY_COLOR_VALUE;
 
 import com.ibm.icu.text.MessageFormat;
@@ -38,13 +34,17 @@ import org.eclipse.jface.resource.JFaceResources;
 import org.eclipse.jface.resource.StringConverter;
 import org.eclipse.jface.util.IPropertyChangeListener;
 import org.eclipse.jface.util.PropertyChangeEvent;
+import org.eclipse.jface.viewers.DoubleClickEvent;
 import org.eclipse.jface.viewers.IColorProvider;
+import org.eclipse.jface.viewers.IDoubleClickListener;
 import org.eclipse.jface.viewers.IFontProvider;
 import org.eclipse.jface.viewers.ISelection;
+import org.eclipse.jface.viewers.ISelectionChangedListener;
 import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.jface.viewers.ITreeContentProvider;
 import org.eclipse.jface.viewers.LabelProvider;
 import org.eclipse.jface.viewers.LabelProviderChangedEvent;
+import org.eclipse.jface.viewers.SelectionChangedEvent;
 import org.eclipse.jface.viewers.StructuredSelection;
 import org.eclipse.jface.viewers.TreeViewer;
 import org.eclipse.jface.viewers.Viewer;
@@ -52,6 +52,12 @@ import org.eclipse.jface.viewers.ViewerComparator;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.custom.SashForm;
 import org.eclipse.swt.custom.StackLayout;
+import org.eclipse.swt.events.DisposeEvent;
+import org.eclipse.swt.events.DisposeListener;
+import org.eclipse.swt.events.PaintEvent;
+import org.eclipse.swt.events.PaintListener;
+import org.eclipse.swt.events.SelectionAdapter;
+import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.graphics.Color;
 import org.eclipse.swt.graphics.Font;
 import org.eclipse.swt.graphics.FontData;
@@ -84,6 +90,7 @@ import org.eclipse.ui.internal.WorkbenchMessages;
 import org.eclipse.ui.internal.WorkbenchPlugin;
 import org.eclipse.ui.internal.misc.StatusUtil;
 import org.eclipse.ui.internal.util.PrefUtil;
+import org.eclipse.ui.internal.util.Util;
 import org.eclipse.ui.themes.ITheme;
 import org.eclipse.ui.themes.IThemeManager;
 import org.eclipse.ui.themes.IThemePreview;
@@ -93,12 +100,12 @@ import org.osgi.service.event.EventHandler;
 
 /**
  * Preference page for management of system colors, gradients and fonts.
- *
+ * 
  * @since 3.0
  */
 public final class ColorsAndFontsPreferencePage extends PreferencePage
         implements IWorkbenchPreferencePage {
-
+	
 	private static final String SELECTED_ELEMENT_PREF = "ColorsAndFontsPreferencePage.selectedElement"; //$NON-NLS-1$
 	/**
 	 * The preference that stores the expanded state.
@@ -108,28 +115,31 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	 * The token that separates expanded elements in EXPANDED_ELEMENTS_PREF.
 	 */
 	private static final String EXPANDED_ELEMENTS_TOKEN = "\t"; //$NON-NLS-1$
-
+	
 	/**
      * Marks category tokens in EXPANDED_ELEMENTS_PREF and SELECTED_ELEMENT_PREF.
      */
 	private static final char MARKER_CATEGORY = 'T';
-
+	
 	/**
 	 * Marks color tokens in EXPANDED_ELEMENTS_PREF and SELECTED_ELEMENT_PREF.
 	 */
 	private static final char MARKER_COLOR = 'C';
-
+	
 	/**
 	 * Marks font tokens in EXPANDED_ELEMENTS_PREF and SELECTED_ELEMENT_PREF.
 	 */
 	private static final char MARKER_FONT = 'F';
 
 	private static final int DEFINITION_NOT_AVAIL_COLOR = SWT.COLOR_WIDGET_LIGHT_SHADOW;
-
+			
     private class ThemeContentProvider implements ITreeContentProvider {
 
         private IThemeRegistry registry;
 
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.viewers.ITreeContentProvider#getChildren(java.lang.Object)
+         */
         @Override
 		public Object[] getChildren(Object parentElement) {
             if (parentElement instanceof ThemeElementCategory) {
@@ -153,12 +163,14 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 				defs = registry.getFonts();
 			}
 
-			for (IHierarchalThemeElementDefinition elementDefinition : defs) {
-				if (id.equals(elementDefinition.getDefaultsTo())
+			for (int i = 0; i < defs.length; i++) {
+				if (id.equals(defs[i].getDefaultsTo())
 						&& ColorsAndFontsPreferencePage.equals(
-								((ICategorizedThemeElementDefinition) def).getCategoryId(),
-								((ICategorizedThemeElementDefinition) elementDefinition).getCategoryId())) {
-					list.add(elementDefinition);
+								((ICategorizedThemeElementDefinition) def)
+										.getCategoryId(),
+								((ICategorizedThemeElementDefinition) defs[i])
+										.getCategoryId())) {
+					list.add(defs[i]);
 				}
 			}
 			return list.toArray();
@@ -168,11 +180,13 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             ArrayList list = new ArrayList();
 
             if (categoryId != null) {
-				for (ThemeElementCategory category : registry.getCategories()) {
-					if (categoryId.equals(category.getParentId())) {
-						Set bindings = themeRegistry.getPresentationsBindingsFor(category);
+                ThemeElementCategory[] categories = registry.getCategories();
+                for (int i = 0; i < categories.length; i++) {
+                    if (categoryId.equals(categories[i].getParentId())) {
+                        Set bindings = themeRegistry
+                                .getPresentationsBindingsFor(categories[i]);
 						if (bindings == null) {
-							list.add(category);
+							list.add(categories[i]);
 						}
                     }
                 }
@@ -220,8 +234,10 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         private boolean parentIsInSameCategory(ColorDefinition definition) {
             String defaultsTo = definition.getDefaultsTo();
-			for (ColorDefinition colorDef : registry.getColors()) {
-				if (colorDef.getId().equals(defaultsTo) && ColorsAndFontsPreferencePage.equals(colorDef
+            ColorDefinition[] defs = registry.getColors();
+            for (int i = 0; i < defs.length; i++) {
+                if (defs[i].getId().equals(defaultsTo)
+                        && ColorsAndFontsPreferencePage.equals(defs[i]
                                 .getCategoryId(), definition.getCategoryId())) {
 					return true;
 				}
@@ -231,8 +247,10 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         private boolean parentIsInSameCategory(FontDefinition definition) {
             String defaultsTo = definition.getDefaultsTo();
-			for (FontDefinition fontDef : registry.getFonts()) {
-				if (fontDef.getId().equals(defaultsTo) && ColorsAndFontsPreferencePage.equals(fontDef
+            FontDefinition[] defs = registry.getFonts();
+            for (int i = 0; i < defs.length; i++) {
+                if (defs[i].getId().equals(defaultsTo)
+                        && ColorsAndFontsPreferencePage.equals(defs[i]
                                 .getCategoryId(), definition.getCategoryId())) {
 					return true;
 				}
@@ -240,6 +258,9 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             return false;
         }
 
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.viewers.ITreeContentProvider#getParent(java.lang.Object)
+         */
         @Override
 		public Object getParent(Object element) {
 			if (element instanceof ThemeElementCategory)
@@ -270,6 +291,9 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			return null;
         }
 
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.viewers.ITreeContentProvider#hasChildren(java.lang.Object)
+         */
         @Override
 		public boolean hasChildren(Object element) {
             if (element instanceof ThemeElementCategory) {
@@ -285,11 +309,13 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 				defs = registry.getFonts();
 			}
 
-			for (IHierarchalThemeElementDefinition elementDefinition : defs) {
-				if (id.equals(elementDefinition.getDefaultsTo())
+			for (int i = 0; i < defs.length; i++) {
+				if (id.equals(defs[i].getDefaultsTo())
 						&& ColorsAndFontsPreferencePage.equals(
-								((ICategorizedThemeElementDefinition) def).getCategoryId(),
-								((ICategorizedThemeElementDefinition) elementDefinition).getCategoryId())) {
+								((ICategorizedThemeElementDefinition) def)
+										.getCategoryId(),
+								((ICategorizedThemeElementDefinition) defs[i])
+										.getCategoryId())) {
 					return true;
 				}
 			}
@@ -297,30 +323,41 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             return false;
         }
 
+        /*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.IStructuredContentProvider#getElements(java.lang.Object)
+		 */
         @Override
 		public Object[] getElements(Object inputElement) {
             ArrayList list = new ArrayList();
             Object[] uncatChildren = getCategoryChildren(null);
             list.addAll(Arrays.asList(uncatChildren));
-			for (ThemeElementCategory category : ((IThemeRegistry) inputElement).getCategories()) {
-                if (category.getParentId() == null) {
-					Set bindings = themeRegistry.getPresentationsBindingsFor(category);
+            ThemeElementCategory[] categories = ((IThemeRegistry) inputElement)
+                    .getCategories();
+            for (int i = 0; i < categories.length; i++) {
+                if (categories[i].getParentId() == null) {
+                    Set bindings = themeRegistry
+                            .getPresentationsBindingsFor(categories[i]);
 					if (bindings == null) {
-						Object[] children = getChildren(category);
-						if (children != null && children.length > 0) {
-							list.add(category);
-						}
+						list.add(categories[i]);
 					}
                 }
             }
             return list.toArray(new Object[list.size()]);
         }
 
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.viewers.IContentProvider#dispose()
+         */
         @Override
 		public void dispose() {
             categoryMap.clear();
         }
 
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.viewers.IContentProvider#inputChanged(org.eclipse.jface.viewers.Viewer, java.lang.Object, java.lang.Object)
+         */
         @Override
 		public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
             categoryMap.clear();
@@ -341,16 +378,19 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         private int usableImageSize = -1;
 
-        private IPropertyChangeListener listener = event -> {
-			if (event.getNewValue() != null) {
-				fireLabelProviderChanged(new LabelProviderChangedEvent(
-						PresentationLabelProvider.this));
-			} else {
-				// Some theme definition element has been modified and we
-				// need to refresh the viewer
-				refreshAllLabels();
-			}
-		};
+        private IPropertyChangeListener listener = new IPropertyChangeListener() {
+            @Override
+			public void propertyChange(PropertyChangeEvent event) {
+				if (event.getNewValue() != null) {
+					fireLabelProviderChanged(new LabelProviderChangedEvent(
+							PresentationLabelProvider.this));
+				} else {
+					// Some theme definition element has been modified and we
+					// need to refresh the viewer
+					refreshAllLabels();
+				}
+            }
+        };
 
         private Image emptyImage;
 
@@ -366,6 +406,9 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             fontRegistry.addListener(listener);
         }
 
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.viewers.IBaseLabelProvider#dispose()
+         */
         @Override
 		public void dispose() {
             super.dispose();
@@ -394,7 +437,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             }
             fonts.clear();
         }
-
+        
         /**
          * Clears and disposes all fonts and fires a label update.
          */
@@ -404,6 +447,9 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
                     PresentationLabelProvider.this));
         }
 
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.viewers.IFontProvider#getFont(java.lang.Object)
+         */
         @Override
 		public Font getFont(Object element) {
             Display display = tree.getDisplay();
@@ -415,8 +461,8 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
                 Font font = (Font) fonts.get(baseFont);
                 if (font == null) {
                     FontData[] data = baseFont.getFontData();
-                    for (FontData fontData : data) {
-                        fontData.setHeight(parentHeight);
+                    for (int i = 0; i < data.length; i++) {
+                        data[i].setHeight(parentHeight);
                     }
                     font = new Font(display, data);
 
@@ -427,6 +473,9 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             return JFaceResources.getDialogFont();
         }
 
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.viewers.ILabelProvider#getImage(java.lang.Object)
+         */
         @Override
 		public Image getImage(Object element) {
             if (element instanceof ColorDefinition) {
@@ -480,34 +529,34 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             }
         }
 
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.viewers.ILabelProvider#getText(java.lang.Object)
+         */
         @Override
 		public String getText(Object element) {
             if (element instanceof IHierarchalThemeElementDefinition) {
                 IHierarchalThemeElementDefinition themeElement = (IHierarchalThemeElementDefinition) element;
 				if (themeElement.getDefaultsTo() != null) {
-					String myCategory = ((ICategorizedThemeElementDefinition) themeElement).getCategoryId();
-					ICategorizedThemeElementDefinition def;
-					if (element instanceof ColorDefinition) {
+                    String myCategory = ((ICategorizedThemeElementDefinition) themeElement).getCategoryId();
+                    ICategorizedThemeElementDefinition def;
+                    if (element instanceof ColorDefinition)
 						def = themeRegistry.findColor(themeElement.getDefaultsTo());
-					} else {
+					else
 						def = themeRegistry.findFont(themeElement.getDefaultsTo());
-					}
-					if (def != null && !ColorsAndFontsPreferencePage.equals(def.getCategoryId(), myCategory)) {
-						if (isDefault(themeElement)) {
-							return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_default"), //$NON-NLS-1$
-									themeElement.getName(), def.getName());
-						}
-						return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_override"), //$NON-NLS-1$
-								themeElement.getName(), def.getName());
-					}
-				}
+
+                    if (!ColorsAndFontsPreferencePage.equals(def.getCategoryId(), myCategory)) {
+                    	if (isDefault(themeElement))
+							return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_default"), new Object[] { themeElement.getName(), def.getName() }); //$NON-NLS-1$
+               			return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_override"), new Object[] { themeElement.getName(), def.getName() }); //$NON-NLS-1$
+                    }
+                }
             }
             return ((IThemeElementDefinition) element).getName();
         }
 
         /**
          * Return whether the element is set to default.
-         *
+         * 
          * @param def the definition
          * @return whether the element is set to default
          * @since 3.2
@@ -535,7 +584,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		/**
 		 * Returns the DEFINITION_NOT_AVAIL_COLOR color when definition is not
 		 * present in the current theme or null when it is available
-		 *
+		 * 
 		 * @param def
 		 *            the definition
 		 * @return the DEFINITION_NOT_AVAIL_COLOR color or null
@@ -548,6 +597,13 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			return null;
 		}
 
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see
+		 * org.eclipse.jface.viewers.IColorProvider#getBackground(java.lang.
+		 * Object)
+		 */
 		@Override
 		public Color getBackground(Object element) {
 			return null;
@@ -572,7 +628,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	 * made by the user. These changes need to be stored into the preference
 	 * store.
 	 */
-	private Map<ColorDefinition, RGB> colorPreferencesToSet = new HashMap<>(7);
+	private Map<ColorDefinition, RGB> colorPreferencesToSet = new HashMap<ColorDefinition, RGB>(7);
 
     private CascadingColorRegistry colorRegistry;
 
@@ -586,29 +642,29 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
      * The default color preview composite.
      */
     private Composite defaultColorPreview;
-
+    
     /**
      * The default font preview composite.
      */
     private Composite defaultFontPreview;
-
+    
     /**
      * The composite to use when no preview is available.
      */
     private Composite defaultNoPreview;
-
+    
 	/**
 	 * Currently selected font for preview; might be null.
 	 */
 	private Font currentFont;
-
+	
 	/**
-	 * Currently selected color for preview; might be null.
+	 * Currently selected color for preview; might be null. 
 	 */
 	private Color currentColor;
-
+	
 	/**
-	 * Canvas used to draw default color preview
+	 * Canvas used to draw default color preview 
 	 */
 	private Canvas colorSampler;
 
@@ -625,31 +681,24 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
 	/**
 	 * The button to edit the default of the selected element.
-	 *
+	 * 
 	 * @since 3.7
 	 */
 	private Button editDefaultButton;
 
 	/**
 	 * The button to go to the default of the selected element.
-	 *
+	 * 
 	 * @since 3.7
 	 */
 	private Button goToDefaultButton;
-
-	/**
-	 * The button to expand the tree.
-	 *
-	 * @since 4.5
-	 */
-	private Button expandAllButton;
 
 	/**
 	 * Map of definition FontDefinition->FontData[] capturing the changes
 	 * explicitly made by the user. These changes need to be stored into the
 	 * preference store.
 	 */
-	private Map<FontDefinition, FontData[]> fontPreferencesToSet = new HashMap<>(
+	private Map<FontDefinition, FontData[]> fontPreferencesToSet = new HashMap<FontDefinition, FontData[]>(
 			7);
 
     private CascadingFontRegistry fontRegistry;
@@ -661,12 +710,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	/**
 	 * Map of definition id->FontData[] capturing the temporary changes caused
 	 * by a 'defaultsTo' font change.
-	 *
-	 * @deprecated in this page, we should only care about preferences,
-	 *             preference to fontValues synchronization in registry is
-	 *             handled in the ThemeAPI and listeners
 	 */
-	@Deprecated
     private Map fontValuesToSet = new HashMap(7);
 
     /**
@@ -702,7 +746,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
     private Workbench workbench;
 
     private FilteredTree tree;
-
+    
 	private Text descriptionText;
 
 	private IEventBroker eventBroker;
@@ -751,7 +795,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	 * <li><strong>selectColor:</strong>ID - selects the color with the given ID
 	 * </li>
 	 * </p>
-	 *
+	 * 
 	 * @param data
 	 *            the data to be applied
 	 */
@@ -786,7 +830,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
 	/**
 	 * Selects and reveals the given element.
-	 *
+	 * 
 	 * @param selection
 	 *            the object to select and reveal
 	 * @since 3.7
@@ -810,7 +854,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
 	/**
 	 * Get the active theme.
-	 *
+	 * 
 	 * @return the active theme if there is one; <code>null</code> if there
 	 *         isn't or {@link #themeEngine} is <code>null</code>.
 	 */
@@ -847,19 +891,25 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		return separator;
 	}
 
+    /* (non-Javadoc)
+     * @see org.eclipse.jface.preference.PreferencePage#createContents(org.eclipse.swt.widgets.Composite)
+     */
     @Override
 	protected Control createContents(Composite parent) {
     	PlatformUI.getWorkbench().getHelpSystem().setHelp(parent, IWorkbenchHelpContextIds.FONTS_PREFERENCE_PAGE);
-
-        parent.addDisposeListener(e -> {
-		    if (appliedDialogFont != null)
-				appliedDialogFont.dispose();
-		});
-
+    	
+        parent.addDisposeListener(new DisposeListener() {
+            @Override
+			public void widgetDisposed(DisposeEvent e) {
+                if (appliedDialogFont != null)
+					appliedDialogFont.dispose();
+            }
+        });
+        
 		final SashForm advancedComposite = new SashForm(parent, SWT.VERTICAL);
 		GridData sashData = new GridData(SWT.FILL, SWT.FILL, true, true);
 		advancedComposite.setLayoutData(sashData);
-
+        
         Composite mainColumn = new Composite(advancedComposite, SWT.NONE);
         GridLayout layout = new GridLayout();
         layout.numColumns = 2;
@@ -876,7 +926,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         label.setLayoutData(data);
 
         createTree(mainColumn);
-
+        
         // --- buttons
         Composite controlColumn = new Composite(mainColumn, SWT.NONE);
         data = new GridData(GridData.FILL_VERTICAL);
@@ -885,7 +935,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         layout.marginHeight = 0;
         layout.marginWidth = 0;
         controlColumn.setLayout(layout);
-
+        
         // we need placeholder to offset the filter control of the table
         Label placeholder = new Label(controlColumn, SWT.NONE);
         GridData placeholderData = new GridData(SWT.TOP);
@@ -898,9 +948,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		createSeparator(controlColumn);
 		editDefaultButton = createButton(controlColumn, RESOURCE_BUNDLE.getString("editDefault")); //$NON-NLS-1$
 		goToDefaultButton = createButton(controlColumn, RESOURCE_BUNDLE.getString("goToDefault")); //$NON-NLS-1$
-		createSeparator(controlColumn);
-		expandAllButton = createButton(controlColumn, RESOURCE_BUNDLE.getString("expandAll")); //$NON-NLS-1$
-		expandAllButton.setEnabled(true);
         // --- end of buttons
 
 		createDescriptionControl(mainColumn);
@@ -912,7 +959,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		previewLayout.marginHeight = 0;
         previewColumn.setFont(parent.getFont());
         previewColumn.setLayout(previewLayout);
-
+        
         // --- create preview control
 		Composite composite = new Composite(previewColumn, SWT.NONE);
 
@@ -922,11 +969,11 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		layout2.marginHeight = 0;
 		layout2.marginWidth = 0;
 		composite.setLayout(layout2);
-
+        
 		Label label2 = new Label(composite, SWT.LEFT);
 		label2.setText(RESOURCE_BUNDLE.getString("preview")); //$NON-NLS-1$
 		myApplyDialogFont(label2);
-
+        
         previewComposite = new Composite(composite, SWT.NONE);
         previewComposite.setLayoutData(new GridData(GridData.FILL_BOTH));
         stackLayout = new StackLayout();
@@ -934,14 +981,14 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         stackLayout.marginWidth = 0;
         previewComposite.setLayout(stackLayout);
         // -- end of preview control
-
-
+         
+        
 		defaultFontPreview = createFontPreviewControl();
 		defaultColorPreview = createColorPreviewControl();
 		defaultNoPreview = createNoPreviewControl();
-
+        
         hookListeners();
-
+        
         updateTreeSelection(tree.getViewer().getSelection());
 
 		advancedComposite.setWeights(new int[] { 75, 25 });
@@ -951,7 +998,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	/**
 	 * Create the <code>ListViewer</code> that will contain all color
 	 * definitions as defined in the extension point.
-	 *
+	 * 
 	 * @param parent
 	 *            the parent <code>Composite</code>.
 	 */
@@ -962,6 +1009,15 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		// non-category elements to be returned in the event that their children
 		// do not and also search the descriptions.
 		PatternFilter filter = new PatternFilter() {
+			/*
+			 * (non-Javadoc)
+			 * 
+			 * @see
+			 * org.eclipse.ui.dialogs.PatternFilter#isLeafMatch(org.eclipse.
+			 * jface.viewers.Viewer, java.lang.Object)
+			 * 
+			 * @since 3.7
+			 */
 			@Override
 			protected boolean isLeafMatch(Viewer viewer, Object element) {
 				if (super.isLeafMatch(viewer, element))
@@ -999,23 +1055,26 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			}
 		});
 		tree.getViewer().setInput(WorkbenchPlugin.getDefault().getThemeRegistry());
-		tree.getViewer().addDoubleClickListener(event -> {
-			IStructuredSelection s = (IStructuredSelection) event.getSelection();
-			Object element = s.getFirstElement();
-			if (tree.getViewer().isExpandable(element))
-				tree.getViewer().setExpandedState(element,
-						!tree.getViewer().getExpandedState(element));
+		tree.getViewer().addDoubleClickListener(new IDoubleClickListener() {
+			@Override
+			public void doubleClick(DoubleClickEvent event) {
+				IStructuredSelection s = (IStructuredSelection) event.getSelection();
+				Object element = s.getFirstElement();
+				if (tree.getViewer().isExpandable(element))
+					tree.getViewer().setExpandedState(element,
+							!tree.getViewer().getExpandedState(element));
 
-			if (element instanceof ThemeElementDefinition) {
-				ThemeElementDefinition definition = (ThemeElementDefinition) element;
-
-				if (element instanceof FontDefinition) {
-					editFont(tree.getDisplay());
-				} else if (element instanceof ColorDefinition
-						&& isAvailableInCurrentTheme(definition)) {
-					editColor(tree.getDisplay());
+				if (element instanceof ThemeElementDefinition) {
+					ThemeElementDefinition definition = (ThemeElementDefinition) element;
+					
+					if (element instanceof FontDefinition) {
+						editFont(tree.getDisplay());
+					} else if (element instanceof ColorDefinition
+							&& isAvailableInCurrentTheme(definition)) {
+						editColor(tree.getDisplay());
+					}
+					updateControls();
 				}
-				updateControls();
 			}
 		});
 
@@ -1023,6 +1082,9 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		restoreTreeSelection();
 	}
 
+    /* (non-Javadoc)
+     * @see org.eclipse.jface.dialogs.IDialogPage#dispose()
+     */
     @Override
 	public void dispose() {
 		eventBroker.unsubscribe(themeRegistryRestyledHandler);
@@ -1045,7 +1107,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             try {
                 preview.dispose();
             } catch (RuntimeException e) {
-                WorkbenchPlugin.log(RESOURCE_BUNDLE.getString("errorDisposePreviewLog"), //$NON-NLS-1$
+                WorkbenchPlugin.log(RESOURCE_BUNDLE.getString("errorDisposePreviewLog"), //$NON-NLS-1$ 
                 		StatusUtil.newStatus(IStatus.ERROR, e.getMessage(), e));
             }
         }
@@ -1054,7 +1116,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
     /**
      * Get the ancestor of the given color, if any.
-     *
+     * 
      * @param definition the descendant <code>ColorDefinition</code>.
      * @return the ancestor <code>ColorDefinition</code>, or <code>null</code>
      * 		if none.
@@ -1068,7 +1130,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
     /**
      * Get the RGB value of the given colors ancestor, if any.
-     *
+     * 
      * @param definition the descendant <code>ColorDefinition</code>.
      * @return the ancestor <code>RGB</code>, or <code>null</code> if none.
      */
@@ -1082,7 +1144,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
     /**
      * Get the RGB value for the specified definition.  Cascades through
      * preferenceToSet, valuesToSet and finally the registry.
-     *
+     * 
      * @param definition the <code>ColorDefinition</code>.
      * @return the <code>RGB</code> value.
      */
@@ -1099,7 +1161,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
     /**
      * Get colors that descend from the provided color.
-     *
+     * 
      * @param definition the ancestor <code>ColorDefinition</code>.
      * @return the ColorDefinitions that have the provided definition as their
      * 		defaultsTo attribute.
@@ -1114,9 +1176,9 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         Arrays.sort(sorted, new IThemeRegistry.HierarchyComparator(colors));
 
-        for (ColorDefinition colorDefinition : sorted) {
-            if (id.equals(colorDefinition.getDefaultsTo()))
-				list.add(colorDefinition);
+        for (int i = 0; i < sorted.length; i++) {
+            if (id.equals(sorted[i].getDefaultsTo()))
+				list.add(sorted[i]);
         }
         return (ColorDefinition[]) list.toArray(new ColorDefinition[list.size()]);
     }
@@ -1131,9 +1193,9 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         Arrays.sort(sorted, new IThemeRegistry.HierarchyComparator(fonts));
 
-        for (FontDefinition fontDefinition : sorted) {
-            if (id.equals(fontDefinition.getDefaultsTo()))
-				list.add(fontDefinition);
+        for (int i = 0; i < sorted.length; i++) {
+            if (id.equals(sorted[i].getDefaultsTo()))
+				list.add(sorted[i]);
         }
         return (FontDefinition[]) list.toArray(new FontDefinition[list.size()]);
     }
@@ -1167,7 +1229,7 @@ getPreferenceStore(),
     }
 
     protected ColorDefinition getSelectedColorDefinition() {
-		Object o = tree.getViewer().getStructuredSelection().getFirstElement();
+        Object o = ((IStructuredSelection) tree.getViewer().getSelection()).getFirstElement();
 		if (o instanceof ColorDefinition) {
 			return themeRegistry.findColor(((ColorDefinition) o).getId());
 		}
@@ -1175,117 +1237,142 @@ getPreferenceStore(),
     }
 
     protected FontDefinition getSelectedFontDefinition() {
-		Object o = tree.getViewer().getStructuredSelection().getFirstElement();
+        Object o = ((IStructuredSelection) tree.getViewer().getSelection()).getFirstElement();
 		if (o instanceof FontDefinition) {
 			return themeRegistry.findFont(((FontDefinition) o).getId());
 		}
         return null;
     }
-
+    
     protected boolean isFontSelected() {
-		Object o = tree.getViewer().getStructuredSelection().getFirstElement();
+    	Object o = ((IStructuredSelection) tree.getViewer().getSelection()).getFirstElement();
     	return (o instanceof FontDefinition);
     }
 
     protected boolean isColorSelected() {
-		Object o = tree.getViewer().getStructuredSelection().getFirstElement();
+    	Object o = ((IStructuredSelection) tree.getViewer().getSelection()).getFirstElement();
     	return (o instanceof ColorDefinition);
     }
-
+    
     /**
      * Hook all control listeners.
      */
     private void hookListeners() {
         TreeViewer viewer = tree.getViewer();
-		viewer.addSelectionChangedListener(event -> updateTreeSelection(event.getSelection()));
+		viewer.addSelectionChangedListener(new ISelectionChangedListener() {
+                @Override
+				public void selectionChanged(SelectionChangedEvent event) {
+                    updateTreeSelection(event.getSelection());
+                }
+		});
+		
+        fontChangeButton.addSelectionListener(new SelectionAdapter() {
+            @Override
+			public void widgetSelected(SelectionEvent event) {
+            	Display display = event.display;
+            	if (isFontSelected())
+            		editFont(display);
+            	else if (isColorSelected())
+            		editColor(display);
+            	updateControls();
+            }
+        });
 
-        fontChangeButton.addSelectionListener(widgetSelectedAdapter(event -> {
-			Display display = event.display;
-			if (isFontSelected())
-				editFont(display);
-			else if (isColorSelected())
-				editColor(display);
-			updateControls();
-		}));
+        fontResetButton.addSelectionListener(new SelectionAdapter() {
 
-        fontResetButton.addSelectionListener(widgetSelectedAdapter(e -> {
-			if (isFontSelected())
-				resetFont(getSelectedFontDefinition(), false);
-			else if (isColorSelected())
-				resetColor(getSelectedColorDefinition(), false);
-			updateControls();
-		}));
+            @Override
+			public void widgetSelected(SelectionEvent e) {
+            	if (isFontSelected())
+					resetFont(getSelectedFontDefinition(), false);
+            	else if (isColorSelected())
+					resetColor(getSelectedColorDefinition(), false);
+            	updateControls();
+            }
+        });
 
-        fontSystemButton.addSelectionListener(widgetSelectedAdapter(event -> {
-		    FontDefinition definition = getSelectedFontDefinition();
-		    if (definition == null)
-		    	return;
-		    FontData[] defaultFontData = JFaceResources.getDefaultFont().getFontData();
-			setFontPreferenceValue(definition, defaultFontData, false);
-		    updateControls();
-		}));
+        fontSystemButton.addSelectionListener(new SelectionAdapter() {
+            @Override
+			public void widgetSelected(SelectionEvent event) {
+                FontDefinition definition = getSelectedFontDefinition();
+                if (definition == null)
+                	return;
+                FontData[] defaultFontData = JFaceResources.getDefaultFont().getFontData();
+				setFontPreferenceValue(definition, defaultFontData, false);
+                updateControls();
+            }
+        });
 
-		editDefaultButton.addSelectionListener(widgetSelectedAdapter(event -> {
-			Display display = event.display;
-			FontDefinition fontDefinition = getSelectedFontDefinition();
-			if (fontDefinition != null) {
-				String defaultFontId = fontDefinition.getDefaultsTo();
-				FontDefinition defaultFontDefinition = themeRegistry.findFont(defaultFontId);
-				editFont(defaultFontDefinition, display);
-			} else {
-				ColorDefinition colorDefinition = getSelectedColorDefinition();
-				if (colorDefinition != null) {
-					String defaultColorId = colorDefinition.getDefaultsTo();
-					ColorDefinition defaultColorDefinition = themeRegistry
-							.findColor(defaultColorId);
-					editColor(defaultColorDefinition, display);
+		editDefaultButton.addSelectionListener(new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent event) {
+				Display display = event.display;
+				FontDefinition fontDefinition = getSelectedFontDefinition();
+				if (fontDefinition != null) {
+					String defaultFontId = fontDefinition.getDefaultsTo();
+					FontDefinition defaultFontDefinition = themeRegistry.findFont(defaultFontId);
+					editFont(defaultFontDefinition, display);
+				} else {
+					ColorDefinition colorDefinition = getSelectedColorDefinition();
+					if (colorDefinition != null) {
+						String defaultColorId = colorDefinition.getDefaultsTo();
+						ColorDefinition defaultColorDefinition = themeRegistry
+								.findColor(defaultColorId);
+						editColor(defaultColorDefinition, display);
+					}
 				}
+				updateControls();
 			}
-			updateControls();
-		}));
+		});
 
-		goToDefaultButton.addSelectionListener(widgetSelectedAdapter(event -> {
-			FontDefinition fontDefinition = getSelectedFontDefinition();
-			if (fontDefinition != null) {
-				String defaultFontId = fontDefinition.getDefaultsTo();
-				FontDefinition defaultFontDefinition = themeRegistry.findFont(defaultFontId);
-				selectAndReveal(defaultFontDefinition);
-			} else {
-				ColorDefinition colorDefinition = getSelectedColorDefinition();
-				if (colorDefinition != null) {
-					String defaultColorId = colorDefinition.getDefaultsTo();
-					ColorDefinition defaultColorDefinition = themeRegistry
-							.findColor(defaultColorId);
-					selectAndReveal(defaultColorDefinition);
+		goToDefaultButton.addSelectionListener(new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent event) {
+				FontDefinition fontDefinition = getSelectedFontDefinition();
+				if (fontDefinition != null) {
+					String defaultFontId = fontDefinition.getDefaultsTo();
+					FontDefinition defaultFontDefinition = themeRegistry.findFont(defaultFontId);
+					selectAndReveal(defaultFontDefinition);
+				} else {
+					ColorDefinition colorDefinition = getSelectedColorDefinition();
+					if (colorDefinition != null) {
+						String defaultColorId = colorDefinition.getDefaultsTo();
+						ColorDefinition defaultColorDefinition = themeRegistry
+								.findColor(defaultColorId);
+						selectAndReveal(defaultColorDefinition);
+					}
 				}
+				updateControls();
 			}
-			updateControls();
-		}));
-
-		expandAllButton.addSelectionListener(widgetSelectedAdapter(event -> tree.getViewer().expandAll()));
+		});
 
     }
 
+    /* (non-Javadoc)
+     * @see org.eclipse.ui.IWorkbenchPreferencePage#init(org.eclipse.ui.IWorkbench)
+     */
     @Override
 	public void init(IWorkbench aWorkbench) {
         this.workbench = (Workbench) aWorkbench;
-		themeEngine = workbench.getService(IThemeEngine.class);
+		themeEngine = (IThemeEngine) workbench.getService(IThemeEngine.class);
         setPreferenceStore(PrefUtil.getInternalPreferenceStore());
 
         final IThemeManager themeManager = aWorkbench.getThemeManager();
-        themeChangeListener = event -> {
-		    if (event.getProperty().equals(
-		            IThemeManager.CHANGE_CURRENT_THEME)) {
-		        updateThemeInfo(themeManager);
-		        refreshCategory();
-				refreshAllLabels();
-		    }
-		};
+        themeChangeListener = new IPropertyChangeListener() {
+            @Override
+			public void propertyChange(PropertyChangeEvent event) {
+                if (event.getProperty().equals(
+                        IThemeManager.CHANGE_CURRENT_THEME)) {
+                    updateThemeInfo(themeManager);
+                    refreshCategory();
+					refreshAllLabels();
+                }
+            }
+        };
         themeManager.addPropertyChangeListener(themeChangeListener);
 
         updateThemeInfo(themeManager);
-
-		eventBroker = workbench.getService(IEventBroker.class);
+        
+        eventBroker = (IEventBroker) workbench.getService(IEventBroker.class);
 		eventBroker.subscribe(WorkbenchThemeManager.Events.THEME_REGISTRY_RESTYLED,
 				themeRegistryRestyledHandler);
     }
@@ -1326,7 +1413,7 @@ getPreferenceStore(),
 
     /**
      * Answers whether the definition is currently set to the default value.
-     *
+     * 
      * @param definition the <code>ColorDefinition</code> to check.
      * @return Return whether the definition is currently mapped to the default
      * 		value, either in the preference store or in the local change record
@@ -1453,8 +1540,8 @@ getPreferenceStore(),
 
         Arrays.sort(definitionsCopy, new IThemeRegistry.HierarchyComparator(definitions));
 
-        for (ColorDefinition colorDefinition : definitionsCopy) {
-			resetColor(colorDefinition, true);
+        for (int i = 0; i < definitionsCopy.length; i++) {
+			resetColor(definitionsCopy[i], true);
 		}
     }
 
@@ -1481,8 +1568,11 @@ getPreferenceStore(),
 		return ThemeElementHelper.createPreferenceKey(currentTheme, definition.getId());
 	}
 
+    /* (non-Javadoc)
+     * @see org.eclipse.jface.preference.PreferencePage#performDefaults()
+     */
     @Override
-	public void performDefaults() {
+	protected void performDefaults() {
         performColorDefaults();
         performFontDefaults();
 		updateControls();
@@ -1498,8 +1588,8 @@ getPreferenceStore(),
 
         Arrays.sort(definitionsCopy, new IThemeRegistry.HierarchyComparator(definitions));
 
-        for (FontDefinition fontDefinition : definitionsCopy) {
-			resetFont(fontDefinition, true);
+        for (int i = 0; i < definitionsCopy.length; i++) {
+			resetFont(definitionsCopy[i], true);
 		}
     }
 
@@ -1518,6 +1608,9 @@ getPreferenceStore(),
         return true;
     }
 
+    /* (non-Javadoc)
+     * @see org.eclipse.jface.preference.IPreferencePage#performOk()
+     */
     @Override
 	public boolean performOk() {
     	saveTreeExpansion();
@@ -1539,7 +1632,7 @@ getPreferenceStore(),
 
     /**
      * Resets the supplied definition to its default value.
-     *
+     * 
      * @param definition the <code>ColorDefinition</code> to reset.
      * @return whether any change was made.
      */
@@ -1583,7 +1676,7 @@ getPreferenceStore(),
 
     /**
      * Set the value (in preferences) for the given color.
-     *
+     * 
      * @param definition the <code>ColorDefinition</code> to set.
      * @param newRGB the new <code>RGB</code> value for the definitions
      * 		identifier.
@@ -1596,34 +1689,39 @@ getPreferenceStore(),
 
     /**
      * Set the value (in registry) for the given colors children.
-     *
+     * 
      * @param definition the <code>ColorDefinition</code> whose children should
      * 		be set.
      * @param newRGB the new <code>RGB</code> value for the definitions
      * 		identifier.
      */
     private void setDescendantRegistryValues(ColorDefinition definition, RGB newRGB) {
-		for (ColorDefinition colorDefinition : getDescendantColors(definition)) {
-			if (isDefault(colorDefinition)) {
-				setDescendantRegistryValues(colorDefinition, newRGB);
-				setRegistryValue(colorDefinition, newRGB);
-				colorValuesToSet.put(colorDefinition.getId(), newRGB);
+        ColorDefinition[] children = getDescendantColors(definition);
+
+        for (int i = 0; i < children.length; i++) {
+            if (isDefault(children[i])) {
+                setDescendantRegistryValues(children[i], newRGB);
+                setRegistryValue(children[i], newRGB);
+                colorValuesToSet.put(children[i].getId(), newRGB);
             }
         }
     }
 
-	private void setDescendantRegistryValues(FontDefinition definition, FontData[] datas, boolean reset) {
-		for (FontDefinition fontDefinition : getDescendantFonts(definition)) {
-			if (isDefault(fontDefinition)) {
-				setFontPreferenceValue(fontDefinition, datas, reset);
+    private void setDescendantRegistryValues(FontDefinition definition, FontData[] datas) {
+        FontDefinition[] children = getDescendantFonts(definition);
+
+        for (int i = 0; i < children.length; i++) {
+            if (isDefault(children[i])) {
+                setDescendantRegistryValues(children[i], datas);
+                setRegistryValue(children[i], datas);
+                fontValuesToSet.put(children[i].getId(), datas);
+				fontPreferencesToSet.remove(children[i]);
             }
         }
     }
 
 	protected void setFontPreferenceValue(FontDefinition definition, FontData[] datas, boolean reset) {
-		// descendant values must be computed and set before updating current,
-		// or isDefault will miss them
-		setDescendantRegistryValues(definition, datas, reset);
+        setDescendantRegistryValues(definition, datas);
 		fontPreferencesToSet.put(definition, datas);
 		setRegistryValue(definition, datas);
 		updateDefinitionState(definition, reset);
@@ -1681,7 +1779,7 @@ getPreferenceStore(),
         //recalculate the fonts for the tree
         labelProvider.clearFontCacheAndUpdate();
     }
-
+    
     private void updateTreeSelection(ISelection selection) {
     	ThemeElementCategory category = null;
 	    Object element = ((IStructuredSelection) selection).getFirstElement();
@@ -1714,12 +1812,12 @@ getPreferenceStore(),
                     myApplyDialogFont(previewControl);
                     Text error = new Text(previewControl, SWT.WRAP | SWT.READ_ONLY);
                     error.setText(RESOURCE_BUNDLE.getString("errorCreatingPreview")); //$NON-NLS-1$
-                    WorkbenchPlugin.log(RESOURCE_BUNDLE.getString("errorCreatePreviewLog"), //$NON-NLS-1$
+                    WorkbenchPlugin.log(RESOURCE_BUNDLE.getString("errorCreatePreviewLog"), //$NON-NLS-1$ 
                     		StatusUtil.newStatus(IStatus.ERROR, e.getMessage(), e));
                 }
 	        }
 		}
-
+    	
         if (previewControl == null) { // there is no preview for this theme, use default preview
         	if (element instanceof ColorDefinition)
         		previewControl = defaultColorPreview;
@@ -1753,7 +1851,7 @@ getPreferenceStore(),
 	 * @since 3.1
 	 */
 	private void saveTreeSelection() {
-		IStructuredSelection selection = tree.getViewer().getStructuredSelection();
+		IStructuredSelection selection = (IStructuredSelection) tree.getViewer().getSelection();
 		Object element = selection.getFirstElement();
 		StringBuffer buffer = new StringBuffer();
 		appendMarkerToBuffer(buffer, element);
@@ -1770,13 +1868,13 @@ getPreferenceStore(),
 		String expandedElementsString = getPreferenceStore().getString(EXPANDED_ELEMENTS_PREF);
 		if (expandedElementsString == null)
 			return;
-		String[] expandedElementIDs = expandedElementsString.split(EXPANDED_ELEMENTS_TOKEN);
+		String[] expandedElementIDs = Util.getArrayFromList(expandedElementsString, EXPANDED_ELEMENTS_TOKEN);
 		if (expandedElementIDs.length == 0)
 			return;
 
 		List elements = new ArrayList(expandedElementIDs.length);
-		for (String expandedElementID : expandedElementIDs) {
-			IThemeElementDefinition def = findElementFromMarker(expandedElementID);
+		for (int i = 0; i < expandedElementIDs.length; i++) {
+			IThemeElementDefinition def = findElementFromMarker(expandedElementIDs[i]);
 			if (def != null)
 				elements.add(def);
 		}
@@ -1788,7 +1886,7 @@ getPreferenceStore(),
 	 * character against the known constants and then call the appropriate
 	 * method on the theme registry. If the element does not exist or the string
 	 * is invalid <code>null</code> is returned.
-	 *
+	 * 
 	 * @param string the string to parse
 	 * @return the element, or <code>null</code>
 	 */
@@ -1822,7 +1920,8 @@ getPreferenceStore(),
 		List elementIds = new ArrayList(elements.length);
 
 		StringBuffer buffer = new StringBuffer();
-		for (Object object : elements) {
+		for (int i = 0; i < elements.length; i++) {
+			Object object = elements[i];
 			appendMarkerToBuffer(buffer, object);
 
 			if (buffer.length() != 0) {
@@ -1855,7 +1954,7 @@ getPreferenceStore(),
 
 	/**
 	 * Edit the currently selected font.
-	 *
+	 * 
 	 * @param display
 	 *            the display to open the dialog on
 	 * @since 3.2
@@ -1866,7 +1965,7 @@ getPreferenceStore(),
 
 	/**
 	 * Edit the given font.
-	 *
+	 * 
 	 * @param definition
 	 *            the font definition
 	 * @param display
@@ -1885,16 +1984,16 @@ getPreferenceStore(),
 			}
 		}
 	}
-
+	
 	private void editColor(Display display) {
 		editColor(getSelectedColorDefinition(), display);
 	}
 
 	private void editColor(ColorDefinition definition, Display display) {
 		if (definition == null)
-			return;
+			return; 
 		RGB currentColor = colorRegistry.getRGB(definition.getId());
-
+		
 		ColorDialog colorDialog = new ColorDialog(display.getActiveShell());
 		colorDialog.setRGB(currentColor);
 		RGB selectedColor =  colorDialog.open();
@@ -1904,8 +2003,8 @@ getPreferenceStore(),
 			refreshElement(definition);
 		}
 	}
-
-
+	
+	
 	protected void updateControls() {
 		FontDefinition fontDefinition = getSelectedFontDefinition();
 		if (fontDefinition != null) {
@@ -1939,7 +2038,7 @@ getPreferenceStore(),
 		goToDefaultButton.setEnabled(false);
 		descriptionText.setText(""); //$NON-NLS-1$
 	}
-
+	
     /**
      * @return Return the default "No preview available." preview.
      */
@@ -1951,19 +2050,19 @@ getPreferenceStore(),
 		myApplyDialogFont(l);
 		return noPreviewControl;
 	}
-
+	
 	private void setCurrentFont(FontDefinition fontDefinition) {
 		currentFont = fontRegistry.get(fontDefinition.getId());
 		FontData[] fontData = currentFont != null ? currentFont.getFontData() : new FontData[0];
 
 		// recalculate sample text
 		StringBuffer tmp = new StringBuffer();
-		for (FontData currentFontData : fontData) {
-			tmp.append(currentFontData.getName());
+		for (int i = 0; i < fontData.length; i++) {
+			tmp.append(fontData[i].getName());
 			tmp.append(' ');
-			tmp.append(currentFontData.getHeight());
+			tmp.append(fontData[i].getHeight());
 
-			int style = currentFontData.getStyle();
+			int style = fontData[i].getStyle();
 			if ((style & SWT.BOLD) != 0) {
 				tmp.append(' ');
 				tmp.append(RESOURCE_BUNDLE.getString("boldFont")); //$NON-NLS-1$
@@ -1977,13 +2076,13 @@ getPreferenceStore(),
 		descriptionText.setText(fomatDescription(fontDefinition));
 		fontSampler.redraw();
 	}
-
+	
 	public void setCurrentColor(ColorDefinition colorDefinition) {
 		currentColor = colorRegistry.get(colorDefinition.getId());
 		colorSampler.redraw();
 		descriptionText.setText(fomatDescription(colorDefinition));
 	}
-
+	
 	private Composite createFontPreviewControl() {
 		fontSampler = new Canvas(previewComposite, SWT.NONE);
 		GridLayout gridLayout = new GridLayout();
@@ -1992,9 +2091,12 @@ getPreferenceStore(),
 		fontSampler.setLayout(gridLayout);
 		fontSampler.setLayoutData(new GridData(GridData.FILL_BOTH));
 
-		fontSampler.addPaintListener(e -> {
-			if (currentFont != null) // do the font preview
-				paintFontSample(e.gc);
+		fontSampler.addPaintListener(new PaintListener() {
+			@Override
+			public void paintControl(PaintEvent e) {
+				if (currentFont != null) // do the font preview
+					paintFontSample(e.gc);
+			}
 		});
 		return fontSampler;
 	}
@@ -2032,10 +2134,13 @@ getPreferenceStore(),
         gridLayout.marginHeight = 0;
 		colorSampler.setLayout(gridLayout);
 		colorSampler.setLayoutData(new GridData(GridData.FILL_BOTH));
-
-		colorSampler.addPaintListener(e -> {
-			if (currentColor != null) // do the color preview
-				paintColorSample(e.gc);
+		
+		colorSampler.addPaintListener(new PaintListener() {
+			@Override
+			public void paintControl(PaintEvent e) {
+				if (currentColor != null) // do the color preview
+					paintColorSample(e.gc);
+			}
 		});
 		return colorSampler;
 	}
@@ -2050,12 +2155,12 @@ getPreferenceStore(),
 		int maxHeight = lineHeight * 4;
 		if (clientArea.height > maxHeight)
 			clientArea = new Rectangle(clientArea.x, clientArea.y, clientArea.width, maxHeight);
-
+		
 		String messageTop = RESOURCE_BUNDLE.getString("fontColorSample"); //$NON-NLS-1$
 		String fontColorString = RESOURCE_BUNDLE.getString("fontColorString"); //$NON-NLS-1$
 		RGB rgb = currentColor.getRGB();
-		String messageBottom = MessageFormat.format(fontColorString, Integer.valueOf(rgb.red),
-				Integer.valueOf(rgb.green), Integer.valueOf(rgb.blue));
+		String messageBottom = MessageFormat
+				.format(fontColorString, new Object[] { new Integer(rgb.red), new Integer(rgb.green), new Integer(rgb.blue) });
 
 		// calculate position of the vertical line
 		int separator = (clientArea.width - 2) / 3;
@@ -2149,12 +2254,9 @@ getPreferenceStore(),
 
 	private boolean isAvailableInCurrentTheme(ThemeElementDefinition definition) {
 		if (definition instanceof ColorDefinition) {
-			ColorDefinition colorDef = (ColorDefinition) definition;
-			RGB value = colorDef.getValue();
-			if ((value == null || value == EMPTY_COLOR_VALUE) && colorDef.getDefaultsTo() == null) {
-				return false;
-			}
-			return colorRegistry.get(definition.getId()) != null;
+			RGB value = ((ColorDefinition) definition).getValue();
+			return value != null && value != EMPTY_COLOR_VALUE
+					&& colorRegistry.get(definition.getId()) != null;
 		}
 		return true;
 	}
@@ -2165,7 +2267,7 @@ getPreferenceStore(),
 			return description;
 		}
 		return MessageFormat.format(RESOURCE_BUNDLE.getString("definitionNotAvailInTheme"), //$NON-NLS-1$
-				description).trim();
+				new Object[] { description }).trim();
 	}
 
 	private void updateDefinitionState(ThemeElementDefinition definition, boolean reset) {
@@ -2178,9 +2280,9 @@ getPreferenceStore(),
 
 	private void refreshElement(ThemeElementDefinition definition) {
 		tree.getViewer().refresh(definition);
-		updateTreeSelection(tree.getViewer().getSelection());
-
-		Object newValue = definition instanceof ColorDefinition ?
+		updateTreeSelection(tree.getViewer().getSelection());		
+		
+		Object newValue = definition instanceof ColorDefinition ? 
 			((ColorDefinition) definition).getValue(): ((FontDefinition) definition).getValue();
 		getCascadingTheme().fire(new PropertyChangeEvent(this, definition.getId(), null, newValue));
 	}
