@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2016 IBM Corporation and others.
+ * Copyright (c) 2005, 2013 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,11 +7,8 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *     Patrik Suzzi <psuzzi@gmail.com> - Bug 490700
  *******************************************************************************/
 package org.eclipse.ui.internal.wizards.preferences;
-
-import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
 
 import java.io.File;
 import java.util.Arrays;
@@ -27,12 +24,18 @@ import org.eclipse.jface.dialogs.IDialogConstants;
 import org.eclipse.jface.dialogs.IDialogSettings;
 import org.eclipse.jface.dialogs.MessageDialog;
 import org.eclipse.jface.layout.LayoutConstants;
+import org.eclipse.jface.viewers.CheckStateChangedEvent;
 import org.eclipse.jface.viewers.CheckboxTreeViewer;
+import org.eclipse.jface.viewers.ICheckStateListener;
+import org.eclipse.jface.viewers.ISelectionChangedListener;
 import org.eclipse.jface.viewers.IStructuredSelection;
+import org.eclipse.jface.viewers.SelectionChangedEvent;
 import org.eclipse.jface.viewers.TreeViewer;
 import org.eclipse.jface.wizard.WizardPage;
 import org.eclipse.osgi.util.NLS;
 import org.eclipse.swt.SWT;
+import org.eclipse.swt.events.SelectionAdapter;
+import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.events.SelectionListener;
 import org.eclipse.swt.graphics.Font;
 import org.eclipse.swt.graphics.Image;
@@ -59,7 +62,7 @@ import org.eclipse.ui.model.WorkbenchLabelProvider;
 
 /**
  * Base class for preference export/import pages.
- *
+ * 
  * @since 3.1
  */
 public abstract class WizardPreferencesPage extends WizardPage implements
@@ -73,7 +76,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	private Button overwriteExistingFilesCheckbox;
 
 	protected FilteredTree transfersTree;
-
+	
 	protected Text descText;
 
 	private Composite buttonComposite;
@@ -105,7 +108,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 	protected static final int COMBO_HISTORY_LENGTH = 5;
 
-
+    
 	/**
 	 * @param pageName
 	 */
@@ -123,7 +126,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	 * assumed to be a GridLayout and the number of columns in this layout is
 	 * incremented. Subclasses may override.
 	 * </p>
-	 *
+	 * 
 	 * @param parent
 	 *            the parent composite
 	 * @param id
@@ -145,7 +148,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 		setButtonLayoutData(button);
 
-		button.setData(Integer.valueOf(id));
+		button.setData(new Integer(id));
 		button.setText(label);
 
 		if (defaultButton) {
@@ -160,7 +163,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 	/**
 	 * Add the passed value to self's destination widget's history
-	 *
+	 * 
 	 * @param value
 	 *            java.lang.String
 	 */
@@ -168,6 +171,9 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 		destinationNameField.add(value);
 	}
 
+	/**
+	 * (non-Javadoc) Method declared on IDialogPage.
+	 */
 	@Override
 	public void createControl(Composite parent) {
 		initializeDialogUnits(parent);
@@ -175,7 +181,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 		composite.setLayout(new GridLayout());
 		composite.setLayoutData(new GridData(GridData.VERTICAL_ALIGN_FILL
 				| GridData.HORIZONTAL_ALIGN_FILL));
-
+		
 
 		createTransferArea(composite);
 		setPreferenceTransfers();
@@ -223,7 +229,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	private String getNoOptionsMessage() {
 		return PreferencesMessages.WizardPreferencesPage_noOptionsSelected;
 	}
-
+	
 	protected boolean validDestination() {
 		File file = new File(getDestinationValue());
 		return !(file.getPath().length() <= 0 || file.isDirectory());
@@ -251,7 +257,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 		transferAllButton = new Button(composite, SWT.CHECK);
 		transferAllButton.setText(getAllButtonText());
-
+		
 		group = new Group(composite, SWT.NONE);
 		GridData groupData = new GridData(GridData.FILL_BOTH);
 		groupData.horizontalSpan = 2;
@@ -265,7 +271,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 		GridLayout layout = new GridLayout();
 		group.setLayout(layout);
-
+		
 		transfersTree = createFilteredTree(group);
 
 		transfersTree.setLayoutData(new GridData(GridData.FILL_BOTH));
@@ -277,27 +283,39 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 		Label description = new Label(group, SWT.NONE);
 		description.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
 		description.setText(PreferencesMessages.WizardPreferences_description);
-
+		
 		descText = new Text(group, SWT.V_SCROLL | SWT.READ_ONLY
 				| SWT.BORDER | SWT.WRAP);
 		GridData descriptionData = new GridData(GridData.FILL_BOTH);
 		descriptionData.heightHint = convertHeightInCharsToPixels(3);
 		descText.setLayoutData(descriptionData);
-
-		transferAllButton.addSelectionListener(widgetSelectedAdapter(e -> {
-			if (transferAllButton.getSelection()) {
-				viewer.setAllChecked(false);
+		
+		transferAllButton.addSelectionListener(new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent e) {
+				if (transferAllButton.getSelection()) {
+					viewer.setAllChecked(false);
+				}
+				updateEnablement();
+				updatePageCompletion();
 			}
-			updateEnablement();
-			updatePageCompletion();
-		}));
+		});
 
-		viewer.addSelectionChangedListener(event -> updateDescription());
+		viewer.addSelectionChangedListener(new ISelectionChangedListener() {
 
-		viewer.addCheckStateListener(event -> {
-			transferAllButton.setSelection(false);
-			updateEnablement();
-			updatePageCompletion();
+			@Override
+			public void selectionChanged(SelectionChangedEvent event) {
+				updateDescription();
+			}
+		});
+
+		viewer.addCheckStateListener(new ICheckStateListener() {
+			@Override
+			public void checkStateChanged(CheckStateChangedEvent event) {
+				transferAllButton.setSelection(false);
+				updateEnablement();
+				updatePageCompletion();
+			}
 		});
 
 		addSelectionButtons(group);
@@ -334,7 +352,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 	/**
 	 * Add the selection and deselection buttons to the composite.
-	 *
+	 * 
 	 * @param composite
 	 *            org.eclipse.swt.widgets.Composite
 	 */
@@ -348,28 +366,34 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 		data.grabExcessHorizontalSpace = true;
 		buttonComposite.setLayoutData(data);
 		buttonComposite.setFont(parentFont);
-
+		
 		selectAllButton = new Button(buttonComposite, SWT.PUSH);
 		selectAllButton.setText(PreferencesMessages.SelectionDialog_selectLabel);
-		selectAllButton.setData(Integer.valueOf(IDialogConstants.SELECT_ALL_ID));
+		selectAllButton.setData(new Integer(IDialogConstants.SELECT_ALL_ID));
 		setButtonLayoutData(selectAllButton);
 
-		SelectionListener listener = widgetSelectedAdapter(e -> {
-			viewer.setAllChecked(true);
-			updatePageCompletion();
-		});
+		SelectionListener listener = new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent e) {
+				viewer.setAllChecked(true);
+				updatePageCompletion();
+			}
+		};
 		selectAllButton.addSelectionListener(listener);
 		selectAllButton.setFont(parentFont);
-
+		
 		deselectAllButton = new Button(buttonComposite, SWT.PUSH);
 		deselectAllButton.setText(PreferencesMessages.SelectionDialog_deselectLabel);
-		deselectAllButton.setData(Integer.valueOf(IDialogConstants.DESELECT_ALL_ID));
+		deselectAllButton.setData(new Integer(IDialogConstants.DESELECT_ALL_ID));
 		setButtonLayoutData(deselectAllButton);
 
-		listener = widgetSelectedAdapter(e -> {
-			viewer.setAllChecked(false);
-			updatePageCompletion();
-		});
+		listener = new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent e) {
+				viewer.setAllChecked(false);
+				updatePageCompletion();
+			}
+		};
 		deselectAllButton.addSelectionListener(listener);
 		deselectAllButton.setFont(parentFont);
 	}
@@ -383,7 +407,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 	/**
 	 * Create the export destination specification widgets
-	 *
+	 * 
 	 * @param parent
 	 *            org.eclipse.swt.widgets.Composite
 	 */
@@ -395,10 +419,10 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 		destinationSelectionGroup.setLayout(layout);
 		destinationSelectionGroup.setLayoutData(new GridData(
 				GridData.HORIZONTAL_ALIGN_FILL | GridData.VERTICAL_ALIGN_FILL));
-
+		
 		Label dest = new Label(destinationSelectionGroup, SWT.NONE);
 		dest.setText(getDestinationLabel());
-
+		
 		// destination name entry field
 		destinationNameField = new Combo(destinationSelectionGroup, SWT.SINGLE
 				| SWT.BORDER);
@@ -407,7 +431,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 		GridData data = new GridData(GridData.HORIZONTAL_ALIGN_FILL
 				| GridData.GRAB_HORIZONTAL);
 		destinationNameField.setLayoutData(data);
-
+		
 		// destination browse button
 		destinationBrowseButton = new Button(destinationSelectionGroup,
 				SWT.PUSH);
@@ -415,38 +439,38 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 				.setText(PreferencesMessages.PreferencesExport_browse);
 		setButtonLayoutData(destinationBrowseButton);
 		destinationBrowseButton.addListener(SWT.Selection, this);
-
+		
 		new Label(parent, SWT.NONE); // vertical spacer
 	}
 
 	/**
 	 * Create the export options specification widgets.
-	 *
+	 * 
 	 * @param parent
 	 *            org.eclipse.swt.widgets.Composite
 	 */
 	protected void createOptionsGroup(Composite parent) {
 		// options group
-
+	
 		Composite optionsGroup = new Composite(parent, SWT.NONE);
 		GridLayout layout = new GridLayout();
 		layout.marginHeight = 0;
 		optionsGroup.setLayout(layout);
 		optionsGroup.setLayoutData(new GridData(GridData.HORIZONTAL_ALIGN_FILL
 				| GridData.GRAB_HORIZONTAL));
-
+	
 		// overwrite... checkbox
 		overwriteExistingFilesCheckbox = new Button(optionsGroup, SWT.CHECK
 				| SWT.LEFT);
 		overwriteExistingFilesCheckbox
 				.setText(PreferencesMessages.ExportFile_overwriteExisting);
-
+		
 	}
 
 	/**
 	 * Attempts to ensure that the specified directory exists on the local file
 	 * system. Answers a boolean indicating success.
-	 *
+	 * 
 	 * @return boolean
 	 * @param directory
 	 *            java.io.File
@@ -474,7 +498,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	/**
 	 * Displays a Yes/No question to the user with the specified message and
 	 * returns the user's response.
-	 *
+	 * 
 	 * @param message
 	 *            the question to ask
 	 * @return <code>true</code> for Yes, and <code>false</code> for No
@@ -482,7 +506,8 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	protected boolean queryYesNoQuestion(String message) {
 		MessageDialog dialog = new MessageDialog(getContainer().getShell(),
 				PreferencesMessages.Question, (Image) null, message,
-				MessageDialog.NONE, 0, IDialogConstants.YES_LABEL, IDialogConstants.NO_LABEL) {
+				MessageDialog.NONE, new String[] { IDialogConstants.YES_LABEL,
+						IDialogConstants.NO_LABEL }, 0) {
 			@Override
 			protected int getShellStyle() {
 				return super.getShellStyle() | SWT.SHEET;
@@ -497,7 +522,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	 * If the target for export does not exist then attempt to create it. Answer
 	 * a boolean indicating whether the target exists (ie.- if it either
 	 * pre-existed or this method was able to create it)
-	 *
+	 * 
 	 * @return boolean
 	 */
 	protected boolean ensureTargetIsValid(File file) {
@@ -530,7 +555,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 			if (directoryNames == null) {
 				directoryNames = new String[0];
 			}
-
+		
 			directoryNames = addToHistory(directoryNames, getDestinationValue());
 			settings.put(STORE_DESTINATION_NAMES_ID, directoryNames);
 			String current = getDestinationValue();
@@ -557,7 +582,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 					settings.put(TRANSFER_PREFERENCES_NAMES_ID, preferenceIds);
 				}
 			}
-
+		
 		}
 	}
 
@@ -565,7 +590,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	 * The Finish button was pressed. Try to do the required work now and answer
 	 * a boolean indicating success. If false is returned then the wizard will
 	 * not close.
-	 *
+	 * 
 	 * @return boolean
 	 */
 	public boolean finish() {
@@ -667,14 +692,14 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	 * include their controls in this determination should override the hook
 	 * methods <code>validateSourceGroup</code> and/or
 	 * <code>validateOptionsGroup</code>.
-	 *
+	 * 
 	 * @return <code>true</code> if this page is complete, and
 	 *         <code>false</code> if incomplete
 	 * @see #validateSourceGroup
 	 * @see #validateOptionsGroup
 	 */
 	protected boolean determinePageCompletion() {
-
+		
 		// validate groups in order of priority so error message is the most important one
 		boolean complete = validateSourceGroup() && validateDestinationGroup()
 				&& validateOptionsGroup();
@@ -695,11 +720,11 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	 * contain valid values.
 	 * <p>
 	 * The <code>WizardPreferencesPage</code> implementation of this method
-	 * returns <code>true</code> if the button to transfer all preferences is
-	 * selected OR at least one of the individual items are checked. Subclasses
+	 * returns <code>true</code> if the button to transfer all preferences is 
+	 * selected OR at least one of the individual items are checked. Subclasses 
 	 * may reimplement this method.
 	 * </p>
-	 *
+	 * 
 	 * @return <code>true</code> indicating validity of all controls in the
 	 *         options group
 	 */
@@ -723,7 +748,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	 * returns <code>true</code>. Subclasses may reimplement this hook
 	 * method.
 	 * </p>
-	 *
+	 * 
 	 * @return <code>true</code> indicating validity of all controls in the
 	 *         source specification group
 	 */
@@ -733,14 +758,14 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 	/**
 	 * Answer the string to display in self as the destination type
-	 *
+	 * 
 	 * @return java.lang.String
 	 */
 	protected abstract String getDestinationLabel();
 
 	/**
 	 * Answer the contents of self's destination specification widget
-	 *
+	 * 
 	 * @return java.lang.String
 	 */
 	protected String getDestinationValue() {
@@ -777,7 +802,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 	/**
 	 * Handle all events and enablements for widgets in this page
-	 *
+	 * 
 	 * @param e
 	 *            Event
 	 */
@@ -859,10 +884,10 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 						.getArray(TRANSFER_PREFERENCES_NAMES_ID);
 				if (preferenceIds != null) {
 					PreferenceTransferElement[] transfers = getTransfers();
-					for (PreferenceTransferElement transfer : transfers) {
-						for (String preferenceId : preferenceIds) {
-							if (transfer.getID().equals(preferenceId)) {
-								viewer.setChecked(transfer, true);
+					for (int i = 0; i < transfers.length; i++) {
+						for (int j = 0; j < preferenceIds.length; j++) {
+							if (transfers[i].getID().equals(preferenceIds[j])) {
+								viewer.setChecked(transfers[i], true);
 								break;
 							}
 						}
@@ -880,8 +905,8 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 			if (directoryNames != null) {
 				// destination
 				setDestinationValue(directoryNames[0]);
-				for (String directoryName : directoryNames) {
-					addDestinationItem(directoryName);
+				for (int i = 0; i < directoryNames.length; i++) {
+					addDestinationItem(directoryNames[i]);
 				}
 
 				String current = settings.get(STORE_DESTINATION_ID);
@@ -910,7 +935,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	/**
 	 * Set the contents of self's destination specification widget to the passed
 	 * value
-	 *
+	 * 
 	 * @param value
 	 *            java.lang.String
 	 */
@@ -932,7 +957,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 	 * The <code>WizardDataTransfer</code> implementation of this
 	 * <code>IOverwriteQuery</code> method asks the user whether the existing
 	 * resource at the given path should be overwritten.
-	 *
+	 * 
 	 * @param pathString
 	 * @return the user's reply: one of <code>"YES"</code>, <code>"NO"</code>,
 	 *         <code>"ALL"</code>, or <code>"CANCEL"</code>
@@ -957,9 +982,14 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 									.toOSString());
 		}
 
-		final MessageDialog dialog = new MessageDialog(getContainer().getShell(), PreferencesMessages.Question, null,
-				messageString, MessageDialog.QUESTION, 0, IDialogConstants.YES_LABEL, IDialogConstants.YES_TO_ALL_LABEL,
-				IDialogConstants.NO_LABEL, IDialogConstants.NO_TO_ALL_LABEL, IDialogConstants.CANCEL_LABEL) {
+		final MessageDialog dialog = new MessageDialog(getContainer()
+				.getShell(), PreferencesMessages.Question, null, messageString,
+				MessageDialog.QUESTION, new String[] {
+						IDialogConstants.YES_LABEL,
+						IDialogConstants.YES_TO_ALL_LABEL,
+						IDialogConstants.NO_LABEL,
+						IDialogConstants.NO_TO_ALL_LABEL,
+						IDialogConstants.CANCEL_LABEL }, 0) {
 			@Override
 			protected int getShellStyle() {
 				return super.getShellStyle() | SWT.SHEET;
@@ -968,7 +998,12 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 		String[] response = new String[] { YES, ALL, NO, NO_ALL, CANCEL };
 		// run in syncExec because callback is from an operation,
 		// which is probably not running in the UI thread.
-		getControl().getDisplay().syncExec(() -> dialog.open());
+		getControl().getDisplay().syncExec(new Runnable() {
+			@Override
+			public void run() {
+				dialog.open();
+			}
+		});
 		return dialog.getReturnCode() < 0 ? CANCEL : response[dialog
 				.getReturnCode()];
 	}
